--- a/SorinStudio-html/index.html
+++ b/SorinStudio-html/index.html
@@ -27,7 +27,7 @@
    <div class="container">
      <br>
      <p class="title_big">雅痞艺术 | 关于西装，也许你一无所知</p>
-     <img class="titlelogo" src="sorin-title.jpg">
+     <img class="titlepic" src="sorin-title.jpg">
      <br>
      <p class="text">欢迎来到木牙Make Unique Young Arts，让我们一起来探索雅痞-重构复古！</p>
      <br><br>
@@ -43,30 +43,30 @@
      <p class="chinese">怀着对于材料品质的执着和雅痞风格男装的好奇，我们有幸邀请到了SOARIN工作室来到木牙MUYA，来倾听他们对于独立品牌，风格服饰与个性生活的态度，以及他们是如何平衡设计与商业。</p>
      <p class="english">With a commitment to material quality and a curiosity for yuppie style men's wear, we were fortunate to have SOARIN studio at MUYA to hear their attitude towards independent brands, style clothing and personal life, and how they balance design and business.</p>
      <br><br>
-     <img class="titlelogo" src="sorin01.jpg">
+     <img class="titlepic" src="sorin01.jpg">
      <p class="chinese"> SOARIN工作室专注的西装风格有商务（Business），休闲（Leisure），工装（Work Wear），猎装（Hunting），阿美咔叽（Amekaji），格纹（Check），条纹（stripe）</p>
-     <img class="titlelogo" src="sorin02.jpg">
+     <img class="titlepic" src="sorin02.jpg">
      <br><br>
      <img class="titlelogo" src="chuangzuochuzhong.gif">
      <br><br>
-     <img class="titlelogo" src="sorin03.jpg">
+     <img class="titlepic" src="sorin03.jpg">
      <p class="chinese">"三个年轻人， 在17岁开始创业，经历了无数次失败，回归最初的小小梦想，抱着共同的爱好：开一家复古男装店。我们选择用服装来传达人生态度。</p>
      <p class="chinese">SOARIN意为翱翔，也许我们做得不是你们认为最正确的事，但是绝对是疯狂的事。世界很大，如果不历经艰辛，如何懂得它的美丽动人。"</p>
      <p class="english">"Three young men, starting their own business at the age of 17 and experiencing numerous failures, return to a small, original dream with a common hobby: opening a vintage menswear shop. We choose clothes to convey our attitudes.
      SOARIN means "soar." We may not be doing what you think is the right thing to do, but it's definitely crazy.
      The world is big, if not experienced, how to understand its beauty."</p>
      <br><br>
-     <img class="titlelogo" src="sorin04.jpg">
+     <img class="titlepic" src="sorin04.jpg">
      <br>
-     <img class="titlelogo" src="sorin05.jpg">
+     <img class="titlepic" src="sorin05.jpg">
      <br>
-     <img class="titlelogo" src="sorin06.jpg">
+     <img class="titlepic" src="sorin06.jpg">
      <br>
-     <img class="titlelogo" src="sorin07.jpg">
+     <img class="titlepic" src="sorin07.jpg">
      <br><br>
      <img class="titlelogo" src="shenghuoxinde.gif">
      <br>
-     <img class="titlelogo" src="sorin08.jpg">
+     <img class="titlepic" src="sorin08.jpg">
      <p class="chinese">"如果不是现在?那会是什么时候？<br>
        如果不是我？那会是谁？<br>
       这是我经常会问自己的两句话，对于生活，我很喜欢玩，但玩一样东西之前，我会问，这玩意会不会玩一辈子？
@@ -79,13 +79,13 @@
       Therefore, I have many hobbies, such as vintage motorcycles, guitars, vinyl, snooker, coffee, etc. I am a person of both movement and movement, and I also like reading, because there is no second thing that can let me peek into the world.
       To live is not to live."</p>
     <br><br>
-    <img class="titlelogo" src="sorin09.jpg">
+    <img class="titlepic" src="sorin09.jpg">
     <br>
-    <img class="titlelogo" src="sorin10.jpg">
+    <img class="titlepic" src="sorin10.jpg">
     <br>
-    <img class="titlelogo" src="sorin11.jpg">
+    <img class="titlepic" src="sorin11.jpg">
     <br>
-    <img class="titlelogo" src="sorin12.jpg">
+    <img class="titlepic" src="sorin12.jpg">
     <br><br>
     <img class="titlelogo" src="Q&A.gif">
     <br>
@@ -94,7 +94,7 @@
     <p class="chinese"><a class="big">SOARIN STUDIO:</a> 我觉得在未来，所有生意都将死绝，唯有文化生生不息。如果每一个客户都能够被我们的文化和服务感染到。在推广逻辑来说，网络更多说的是高速传播， 我们希望把客户的单位改为1，就是最好的推广方式。而运营的方向在于，我们做的这件事有没有改善客户体验。</p>
     <p class="english"> We believe in the future, all businesses will perish，only the culture will survive. We wish every customer could be infected by our culture and service. For example, in promotion logic, the network spreads in a high-speed, we wish to change the customer's unit into 1 which is the best way to promote. And the operational direction is what we did to improve the customer experience.</p>
     <br>
-    <img class="titlelogo" src="sorin13.jpg">
+    <img class="titlepic" src="sorin13.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 在工作室成立期间经历过哪些挑战吗？or 在事业困难时期是怎么度过的呢？</p>
     <p class="english">Did Soarin studio experience any challenges? Or, What did the studio team do during a difficult period in your career?</p>
@@ -104,28 +104,28 @@
     There were serious quality problems in the factory, and the capital chain was almost broke, and so on. We often say that much distress regenerates a nation and we made it because of the team bond together and never give up.
     </p>
     <br>
-    <img class="titlelogo" src="sorin14.jpg">
+    <img class="titlepic" src="sorin14.jpg">
     <br>
     <p class="chinese"<a class="big">➤ 木牙MUYA:</a> 为什么会想独立出来做工作室，是不是想保留自己的独特创意，而不被他人左右？</p>
     <p class="english">Why do you want to start an independent men's suit studio? Does it for keeping your own unique creativity or for not being controlled by others?</p>
     <p class="chinese"><a class="big">SOARIN STUDIO:</a> 对，我们想做能够普及并有意义的产品，因为那些快速出现，不必耗费过多努力的大规模生产出来的服装迅速把这件有意义的产品给淘汰掉，我认为不应这样。</p>
     <p class="english">Yes, we want to make products that are popular and meaningful. I believe meaningful products should not be eliminated by clothing products that emerge quickly and are produced in a large scale without any effort.</p>
     <br>
-    <img class="titlelogo" src="sorin15.jpg">
+    <img class="titlepic" src="sorin15.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 制作了这么多的作品，哪件或者哪个系列是工作室最喜爱的呢？为什么最喜爱这一系列的呢？</p>
     <p class="english">After so many works created, which one or series is the studio's favorite? Why this series is best favorite?</p>
     <p class="chinese"><a class="big">SOARIN STUDIO:</a> 在澳门拍的那期雅痞的感觉很浓郁，一个穿着西装行走在大街上的痞子，无论从内心，与外表，都能完美结合的它</p>
     <p class="english"> The series in Macau has a strong feeling of the yuppie. A man ruffianly walking on the street in a suit, which can be perfectly combined with both inner and appearance.</p>
     <br>
-    <img class="titlelogo" src="sorin16.jpg">
+    <img class="titlepic" src="sorin16.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 如何选材，对于作品的用料？当作品idea和所需要的材料无法达到想象中的程度时，工作室会如何做出取舍？或者说是把哪一方面放在第一位呢？</p>
     <p class="english">How did the studio apply materials?  How will the studio make a choice when the idea of the work and the required materials cannot reach the psychological criteria? Or which comes first?</p>
     <p class="chinese"><a class="big">SOARIN STUDIO:</a> 另辟途径，达到设计上想要的效果，一次不行两次，两次不行三次，事在人为。</p>
     <p class="english">Find another way to achieve the desired effect in the design. Once failed then twice, twice failed then thrice. It all depends on effort.</p>
     <br>
-    <img class="titlelogo" src="sorin17.jpg">
+    <img class="titlepic" src="sorin17.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 在服装设计和制作的过程中，如何将服饰设计风格与所对应的受众顾客相结合？</p>
     <p class="english">During the processing of design and produce, How to combine the fashion design style with the customers?</p>
@@ -133,10 +133,10 @@
     由于咖啡渍的因素。</p>
     <p class="english"> Choose the elements we need, make changes and innovations in combination with modern clothing habits, and make different design requirements for different age stages. Baristas, for example, try to choose something that's relatively dark for a barista, because of the coffee stains.</p>
     <br>
-    <img class="titlelogo" src="sorin18.jpg">
+    <img class="titlepic" src="sorin18.jpg">
     <br>
     <br>
-    <img class="titlelogo" src="sorin-flower.gif">
+    <img class="titlepic" src="sorin-flower.gif">
     <br>
     <div class="information">
     <p class="chinese"><a class="big">艺术家品牌及个人联系方式</a></p>
@@ -145,7 +145,7 @@
     <p class="chinese"> <a class="link" href="https://www.instagram.com/soarin.taiwan/" target="_blank">✤ 品牌INS: soarin.taiwan</a></p>
 
     <br>
-    <img class="titlelogo" src="sorin-final.jpg">
+    <img class="titlepic" src="sorin-final.jpg">
   </div>
   <br><br>
      <p class="big">木牙微信订阅号</p>
