--- a/cyriakharris-html/index.html
+++ b/cyriakharris-html/index.html
@@ -25,7 +25,7 @@
   <div class="container">
      <br>
      <p class="title_big">动物世界怪诞频道 | Cyriak Harris</p>
-     <img class="titlelogo" src="cyriak01.jpg">
+     <img class="titlepic" src="cyriak01.jpg">
      <br>
      <p class="text">欢迎来到木牙Make Unique Young Arts，让我们一起来探索怪异美学的奇特魅力！</p>
      <br><br>
@@ -34,19 +34,19 @@
      <p class="chinese">而怪诞艺术则是在全方面角度上反常态的刺激着观众的五感六觉。打破日常，带领我们进入另一个世界。解放被禁锢已久的内心世界。从另一角度打开我们的大脑，重新获取看待事情的眼睛。今天我们有幸邀请到了Cyriak Harris来到木牙MUYA。让我们一起来看他眼中被无数次剪辑，重复，倒叙。充斥着反常无厘头的可爱世界～</p>
      <p class="english">On the other hand, grotesque art stimulates the audience's five senses in an abnormal way. This breaks the routine and takes us to another world. This releases our internal world that has been self-locked for a long time. It opens up our mind from an unique angle and renews a way how we see this world. Today we are honored to have Cyriak Harris in MUYA. Let’s visit his cute world filled with many collages, repeated, flashbacks and abnormal irrational stuff ~</p>
      <br><br>
-     <img class="titlelogo" src="cyriak02.jpg">
+     <img class="titlepic" src="cyriak02.jpg">
      <br>
      <p class="chinese"><a class="big">Cyriak Harris</a><br>一名英国艺术家，他最著名的作品是利用照片和视频蒙太奇制作的超现实动画，他于2004年开始在互联网上传播。此后，他以自由漫画家的身份开始了自己的职业生涯，制作商业广告、电视节目和音乐视频，在油管上拥有大约170万的订阅者。他目前住在林肯郡，没有特殊的原因。</p>
       <p class="english"><a class="big">Cyriak Harris</a><br>
     A British artist best known for his surreal animations using photo and video montage, which he began spreading on the internet in 2004. He has since built a career as a freelance animator, working on commercials, TV shows, and music videos, and has a YouTube following of over a million subscribers. He currently lives in Lincolnshire for no apparent reason.</p>
      <br><br>
-     <img class="titlelogo" src="cyriak03.gif">
+     <img class="titlepic" src="cyriak03.gif">
      <br><br>
-     <img class="titlelogo" src="cyriak04.gif">
+     <img class="titlepic" src="cyriak04.gif">
      <br><br>
-     <img class="titlelogo" src="cyriak05.gif">
+     <img class="titlepic" src="cyriak05.gif">
      <br><br>
-     <img class="titlelogo" src="cyriak15.gif">
+     <img class="titlepic" src="cyriak15.gif">
       <br><br>
     <img class="titlelogo" src="Q&A.gif">
     <br>
@@ -55,7 +55,7 @@
     <p class="chinese"><a class="big">Cyriak Harris:</a> 我因为我的个人风格而流行起来，所以当人们让我做视频时，他们通常希望我做自己的事情。在商业项目中，我试图弱化更多怪诞的元素，一些客户喜欢我疯狂地使用可怕的变形肉体怪物，但其他人对照片/视频蒙太奇的艺术外观更感兴趣。我让他们指出他们特别喜欢我的哪些视频，然后我就以此为基础得出我的观点。</p>
     <p class="english">  I became popular for my style, so when people ask me to make videos they usually want me to do my own thing. With commercial projects I try to tone down the more grotesque elements, some clients prefer me to go crazy with horrible mutating flesh monsters but others are more interested in the artistic look of the photo/video montage.I ask them to point out which of my videos they particularly like and then I base my ideas on that. </p>
     <br>
-    <img class="titlelogo" src="cyriak07.gif">
+    <img class="titlepic" src="cyriak07.gif">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> Cyriak的作品非常的有趣并且都是特别让人惊奇的，这些吸引人的动图和视频大多数都是围绕动物的，动物对于你来说是否是特殊的存在？或者说，Cyriak是否是在用动物映射什么？</p>
     <p class="english"> Cyriak's works are very interesting and amazing. Most of these fascinating GIfs and videos revolve around animals. Do animals have a special existence for you? Or is Cyriak mapping something with animals? </p>
@@ -64,14 +64,14 @@
     <p class="english">I started using animals for the simple reason that unlike people I didn’t need to ask their permission. However, I since discovered that animals are just funnier than people. They are like living cartoon characters, you can project human attributes onto them but also feel the comical tragedy of their existence which they are oblivious to.
     Animals take life very seriously, which makes it more amusing when you put them in ridiculous situations. </p>
     <br>
-    <img class="titlelogo" src="cyriak08.gif">
+    <img class="titlepic" src="cyriak08.gif">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 当Cyriak处理音乐和视频剪辑的时候，对于Cyriak而言叙事性是怎样的呢？Cyriak是如何理解音乐的叙事方式和视频的叙事方式之间的关联性？</p>
     <p class="english">When Cyriak edit and manage music and video, what is the narrative for Cyriak? How does Cyriak think about the relationship of the narrative between music and video?</p>
     <p class="chinese"><a class="big">Cyriak Harris:</a> 对我来说，音乐讲述着一个故事。当我在制作音乐视频时，音乐会带我踏上一段旅程，而歌曲本身就像一个故事板。它提供了视觉效果的基调，剪辑的节奏，甚至是动作的时机。一首好的歌曲也会有一个叙事弧，开头，中间和结尾。故事本身来自我个人的想象，但视频将由音乐塑造。这就是我很难为我不喜欢的音乐制作视频的原因。而且，如果我不喜欢一首歌，我也不会在几个星期里每天都听。</p>
     <p class="english">For me, music tells a story. When I am making a music video, the music is taking me on a journey and the song itself becomes like a storyboard. It provides the mood of the visuals, the pace of the editing and even the timing of the movements. A good song will also have a narrative arc, a beginning, middle and end. The story itself will come from my own imagination, but it will be shaped by the music. This is why I find it difficult to make music videos for songs I don’t like. Also if I don’t like a song I won’t want to hear it every day for several weeks.</p>
     <br>
-    <img class="titlelogo" src="cyriak09.gif">
+    <img class="titlepic" src="cyriak09.gif">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 在Cyriak的视频中出现反复，折叠，置换等常用叙事方式，这些影像的剪辑方式有哪种映射和传达概念吗？</p>
     <p class="english"> Repetition, folding, displacement, and other common narrative and montage modes appear in Cyriak's videos. Are there any mapping and conveying concepts in the editing mode of those videos? </p>
@@ -82,7 +82,7 @@
     I think I just enjoy turning reality into building blocks I can use to create alternative realities. There is also a recurring theme of endlessness. Things build and build, but in a fractal way, changing but always seeming similar, or looping in time.
     Time loops are like a tessellating pattern where the end perfectly fits the beginning. It is like a puzzle where all the pieces create themselves. </p>
     <br>
-    <img class="titlelogo" src="cyriak10.gif">
+    <img class="titlepic" src="cyriak10.gif">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a>对于你自己的作品中的怪，Cyraik是如何理解的呢？是否自己也会觉得自己的作品特别的独特，怪诞，有趣？除了自己之外，在你眼里谁又是那个怪诞，独特，有趣的视频制作艺术家？为什么？</p>
     <p class="english">How does Cyriak understand the weird in your works? Do you find your work unique, bizarre, and interesting? Who else do you think is the weird, unique, funny video making artist? Why? </p>
@@ -93,7 +93,7 @@
      I’m just holding up a mirror to allow people to see that, I think that might be why my stuff resonates with people. It is saying something that is already buried deep in their minds.
     I never think of other artists as being weird or unique, all art is related to what has come before it, even my own stuff is a continuation of what has already been done. We just add our own voice to the ongoing story. </p>
     <br>
-    <img class="titlelogo" src="cyriak11.gif">
+    <img class="titlepic" src="cyriak11.gif">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 对比起作品，Cyriak的音乐也同样的有趣。除了用基本的音乐编辑器之外，你还有应用哪些真实的乐器或者用具来模拟出你想要的声音吗？为什么会想要自己制作视频的配乐？</p>
     <p class="english">Cyriak's music is just as interesting as your videos. In addition to using the basic music editor, are there any real instruments or appliances you use to simulate the sound you want? Why would you want to make your own soundtrack for your video? </p>
@@ -102,7 +102,7 @@
     <p class="english">I’ve been making music longer than I’ve been making animations, but I still don’t know anything about how music works. I never learned any musical instruments or how to read and write the notes. It’s another way of telling a story, which is why I end up using it for my videos.
     Some people really don’t like my music, but I’m ok with that. There is a lot of popular music I don’t like, in a way I am using my own music to show people an alternative musical world, just like my animations are showing people an alternative visual world. I guess music can be just as disturbing as visuals for some people. </p>
     <br>
-    <img class="titlelogo" src="cyriak12.gif">
+    <img class="titlepic" src="cyriak12.gif">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 在Cyriak的网页中，在联系方式页面，Cyriak 列举了一些常见的问题。十分有趣的是，在里面包括了许多拒绝的内容。例如：Would you be interested in collaborating on a music video? /您有兴趣合作制作音乐视频吗？这是否意味着比起共同合作，Cyriak更喜欢做独立的任务？对于因为这些问题可能错失的机会你又是怎么理解的？</p>
     <p class="english">On Cyriak's web page, on the contact information page, Cyriak lists some common questions. Interestingly enough, there is a lot of rejection in it. E.g. “Would you be interested in collaborating on a music video?-What do you mean? ” Does this mean that Cyriak prefers doing independent rather than working together? How do you understand the opportunities that may have been missed because of these answers? </p>
@@ -111,7 +111,7 @@
     <p class="english">I get a lot of requests to make music videos, so I try to filter out the ones that aren’t going to pay me. I am also a massive control-freak and prefer working on my own, so I’m not interested in collaborating with other artists. This is very limiting for me, because anything more ambitious than a music video is probably going to need help from other artists.
      For example I’d love to make a feature length animation, but without help it would probably take me years.</p>
     <br>
-    <img class="titlelogo" src="cyriak13.gif">
+    <img class="titlepic" src="cyriak13.gif">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> Cyriak本科是什么专业的呢？如果与视频无关，Cyraik是如何学习视频剪裁的？对于初次制作视频的新手们有什么推荐的软件？又有哪些制作视频的小众软件是你觉得有趣并且推荐一定要尝试的？</p>
     <p class="english">What was Cyriak's undergraduate major? If it has nothing to do with video, how does Cyraik learn about video tailoring? What software do you recommend for first-time video novices? What niche software for making videos do you find interesting and recommend people try? </p>
@@ -136,7 +136,7 @@
     <p class="english"> <a class="link" href="https://www.instagram.com/cyriak_h/" target="_blank">✤ 个人INS(instagram): cyriak_h</a></p>
     <p class="english"> <a class="link" href="https://www.youtube.com/user/cyriak" target="_blank">✤ YouTube: cyriak</a></p>
     <br>
-    <img class="titlelogo" src="cyriak-final.jpg">
+    <img class="titlepic" src="cyriak-final.jpg">
   </div>
   <br><br>
      <p class="big">木牙微信订阅号</p>
