--- a/eric-html/index.html
+++ b/eric-html/index.html
@@ -28,7 +28,7 @@
    <div class="container">
      <br>
      <p class="title_big">出生在内心的怪兽 | Eric Millikin</p>
-     <img class="titlelogo" src="eric01.jpg">
+     <img class="titlepic" src="eric01.jpg">
      <br>
      <p class="text">欢迎来到木牙Make Unique Young Arts，让我们一起来探索概念型激进主义！</p>
      <br><br>
@@ -37,7 +37,7 @@
      <p class="chinese">AI/VR/AR技术的出现让观众有了更多和艺术互动的可能，增加了许多感官享受。也让更多的人愿意了解艺术。对于艺术家而言也让作品得到了更多被了解的机会。今天我们非常幸运的邀请到概念新媒体艺术家Eric Millikin来到木牙MUYA。和大家一起倾听他对于AI/VR/AR在他的作品中起到的作用，他又如何应用的？对于想要入门的我们又能做些什么。</p>
      <p class="english">The appearance of AI/VR/AR technology makes it possible for the audience to interact with art more, and increases many sensory enjoyment. It also makes more people willing to learn about art. For artists, it also gives them more opportunities to be known about their works. Today we are very lucky to have concept new media artist Eric Millikin in MUYA. Let's listen to his role of AI/VR/AR in his works, and how does he apply it? What can we do for those who want to get started?</p>
      <br><br>
-     <img class="titlelogo" src="eric02.jpg">
+     <img class="titlepic" src="eric02.jpg">
      <br>
      <p class="chinese"><a class="big">Eric Millikin</a><br>概念激进主义新媒体艺术家在底特律，密歇根州和里士满，弗吉尼亚州。Millikin 出生在一个工人阶级家庭，在密歇根乡下的一所<a class="link" href="https://baike.baidu.com/item/%E7%A7%BB%E5%8A%A8%E6%88%BF%E5%B1%8B">移动房屋</a>中长大，父亲是下岗的汽车工人，母亲是Denny’s餐厅的女服务员。</p>
     <p class="chinese">他作品中的激进主义主题经常试图改变他在工业发达的中西部地区和前南部邦联首府看到的偏见、恐惧和剥削。Millikin 是密歇根州立大学的第一代大学生，曾获得多项学术奖学金，包括国家优秀学生奖学金，目前他是弗吉尼亚联邦大学动态影像专业研究生在读学生。</p>
@@ -47,11 +47,11 @@
     <p class="english">The activist themes of his work often seek to change the types of prejudice, fear, and exploitation he has seen in the industrial Midwest and the former capital of the Confederacy. Millikin is a first-generation college student who attended Michigan State University with multiple academic scholarships, including a National Merit Scholarship, and he is currently an MFA candidate at Virginia Commonwealth University's renowned Kinetic Imaging program. </p>
     <p class="english">Coming out of an isolated rural area, Millikin's strategy is now to reach as wide an audience as possible in order to affect maximum social change. He has recently exhibited in 20 venues within a year’s time, and his work has been exhibited in museums and galleries from Detroit, Denver, and Dubai to San Francisco, Scotland, and South Korea. Millikin brings a wide range of experiences to his work, including as a human anatomy lab technician, theatrical sound and lighting designer, industrial musician, Pulitzer Prize-winning artist and art director, and descendant of <a class="link" href="https://en.wikipedia.org/wiki/Salem_witch_trials" target="_blank">Salem Witch Trial victims</a>. His artwork has been featured by WIRED, USA TODAY, Ripley's Believe It or Not!, and The New York Times Sunday Arts section. </p>
      <br><br>
-     <img class="titlelogo" src="eric03.gif">
+     <img class="titlepic" src="eric03.gif">
      <br><br>
-     <img class="titlelogo" src="eric04.gif">
+     <img class="titlepic" src="eric04.gif">
      <br><br>
-     <img class="titlelogo" src="eric05.gif">
+     <img class="titlepic" src="eric05.gif">
      <br><br>
      <img class="titlelogo" src="chuangzuochuzhong.gif">
      <br>
@@ -60,16 +60,16 @@
      <p class="english">
        “I am a conceptual activist new media artist, using techniques like artificial intelligence, interactive video projection, augmented and <a class="link" href="https://en.wikipedia.org/wiki/Virtual_reality" target="_blank">virtual reality</a>, vegetative tissue culture cloning, 3D printing, sound art, occult experiments, and dark humor to address my research into topics like police brutality, economic injustice, species extinction, and the global COVID-19 pandemic.”</p>
     <br><br>
-    <img class="titlelogo" src="eric06.jpg">
+    <img class="titlepic" src="eric06.jpg">
     <br>
-    <img class="titlelogo" src="eric07.jpg">
+    <img class="titlepic" src="eric07.jpg">
     <br>
     <p class="chinese">“我同时研究多个相关的系列，利用实验性的新媒体，寻找最好的方式来传达我的想法，并接触到最广泛的受众。我使用流行和概念策略来创作既平易近人又拥有智慧的艺术作品。我经常探索艺术、科学和神秘学之间的交集，正如人类学家Claude Levi-Strauss所描述的那样:“艺术介于科学知识和神秘或神奇的思想之间，” 科幻作家Arthur C. Clarke形容“任何足够先进的技术都如同魔法般”，艺术家村上隆(Takashi Murakami)则形容“艺术家就是死灵法师”。"</p>
     <p class="english">“I work in multiple interrelated series, using experimental new media to find the best ways to communicate my ideas and reach the widest audiences. I use both pop and conceptual strategies to create artwork that is both accessible as well as intellectual. I often explore the intersections of art, science, and the occult, what anthropologist Claude Levi-Strauss describes as how ’'Art lies half-way between scientific knowledge and mythical or magical thought,” science fiction writer Arthur C. Clarke describes as how “Any sufficiently advanced technology is indistinguishable from magic,” and artist Takashi Murakami describes as how “An artist is a necromancer.” </p>
     <br><br>
-    <img class="titlelogo" src="eric08.jpg">
+    <img class="titlepic" src="eric08.jpg">
     <br>
-    <img class="titlelogo" src="eric09.gif">
+    <img class="titlepic" src="eric09.gif">
     <br><br>
     <img class="titlelogo" src="Q&A.gif">
     <br>
@@ -81,7 +81,7 @@
     <p class="english">So, to me, the smart way to do social activist artwork is to recognize that all artwork is part of the social system, and that if I’m not trying to solve solution problems then I am probably contributing to them. And then once you’ve decided to make social activist artwork, I think it’s smart to embrace the idea of “by any means necessary,” meaning you can make subtle, obscure activist art, or you can make blatant, outrageous activist art, or you can make pretty artwork, or ugly artwork, or angry artwork, or sad artwork, or humorous artwork. So, yeah, new, original, interesting, activist artwork by any means necessary.
     </p>
     <br>
-    <img class="titlelogo" src="eric10.jpg">
+    <img class="titlepic" src="eric10.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 疫情的发生促进了网络艺术的发展。你能谈谈你的新作品“Vironomicon”的想法吗?除了新的冠状病毒，我们还能从这本书中看到什么有趣的东西?你对这次爆发有什么看法?</p>
     <p class="english">The occurrence of this epidemic has promoted the development of online art. Can you talk about the idea of your new work, "Vironomicon"? In addition to the new coronavirus, what interesting things can we see from this book? What do you think of this outbreak? </p>
@@ -91,23 +91,23 @@
     <p class="english"> This COVID-19 outbreak has really shown a lot of the failures of US society and culture that I address in my artwork, including in “Vironomicon.” One thing we are seeing clearly is the segment of the US that believes in superstition over science, and how their beliefs can lead to the deaths of not just themselves but also so many others. I also use predictive artificial intelligence combined with Medieval and Renaissance occult fortune telling in a lot of my work, including in “Vironomicon,” as an exploration of their shared histories.</p> <p class="english">There’s this strange phenomena where occultists know that you can’t go wrong predicting plague or death, but now there’s a disease outbreak and the President is totally unprepared and now months after the initial outbreak he still can’t figure out what’s going on. And so that leaves us to be the ones to try to individually make sense of this, so I made “Vironomicon” as my version of making sense of everything, and then created it as an artist’s book so everyone can stay home in isolation but have something new and unusual to look into and hang on to.
     </p>
     <br>
-    <img class="titlelogo" src="eric11.jpg">
+    <img class="titlepic" src="eric11.jpg">
     <br>
-    <img class="titlelogo" src="eric12.jpg">
+    <img class="titlepic" src="eric12.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 在您的艺术品中，有许多怪物的元素。这仅仅是您的艺术风格，还是您认为怪物是人类的缩影？</p>
     <p class="english">In your artworks, there are many elements of monsters. Does this is only your art style, or do you think the character of a monster is a miniature of a human being?</p>
     <p class="chinese"><a class="big">Eric Millikin:</a> 是的，我的作品通常和历史民间传说中的怪物以及现代流行文化中的怪物相关。对我来说，人类创造怪物故事的方式会告诉我们很多，在我们的文化中有什么类型的恐惧，以及我们的文化如何试图利用恐惧来控制我们。就像现在,这部分是为什么我创建了“Vironomicon”这种恐怖的作品。我们有美国政府应对流感大流行,这是一个巨大的失败,但为了转移民众的注意力,美国总统正试图利用种族歧视，亚裔恐惧，来来唤醒人内心深处的怪兽,来掩饰自己的无能。</p>
     <p class="english">Yeah, I often work with monsters from historical folklore as well as present day pop culture. For me, the way humans create stories of others as monsters will tell us a lot about what types of fears our culture have and how our cultures try to use fear to control us. Like right now, and this part of why I created “Vironomicon” as this sort of horror artifact, we’ve got a US government response to the pandemic that has been a monstrous failure, but in order to deflect that, the president of the United States is trying to use racist anti-Asian fear to try to promote thinking of large groups of people as monsters, to hide his own monstrous incompetence.</p>
     <br>
-    <img class="titlelogo" src="eric13.gif">
+    <img class="titlepic" src="eric13.gif">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 我真的很喜欢您的动态影像和互动装置。我想知道您为什么对艺术互动会如此感兴趣？</p>
     <p class="english"> I’m really into your motion video and interactive installations. I wonder why you feel a strong interest in driving interaction into your artworks? </p>
     <p class="chinese"><a class="big">Eric Millikin:</a> 在我的很多作品中，我试图让人们摆脱被动的观察者的这一设定，不然他们可能只看了几分钟就会离开了。我想创作出人们在体验过后很久还是会不断谈论的艺术作品，并且可能对一些人后来的行为有影响，也可以是作为某种方式去支持某些人。所以对我来说，交互作品就是（在一个场景里）人们可以触摸，移动，穿戴，看到或听到的一些东西对他们自己的行为做出反应，这就强化了我们应该不再是我们世界的被动旁观者，我们都应该更加积极地重塑我们的世界。</p>
     <p class="english">With a lot of my work, I’m trying to get people away from being passive observers, who maybe look at something for a few minutes and then move on. I want to create artwork that people talk about long after experiencing it, and that maybe helps someone take a later action, to stand up for something in some way. So to me, interactive work where someone can touch something, move something, wear something, and see or hear something react to their own actions, then that reinforces the idea that we should all be less passive spectators of our world, and all be more active in reshaping our world. </p>
     <br>
-    <img class="titlelogo" src="eric14.jpg">
+    <img class="titlepic" src="eric14.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a>VR和新媒体艺术在当下非常流行。VR和新媒体艺术的出现完善了艺术的哪一部分？</p>
     <p class="english">VR and New Media art are very popular nowadays. The emergence of VR and New Media art perfected which part of art? </p>
@@ -115,14 +115,14 @@
     <p class="english">One of the things I like most about working in VR is that I can create things that I know will be out of the field of view. Usually, with even the most immersive physical gallery installations, there’s usually a point right at the entrance where you can see everything and nothing is hidden from view, but with VR there can always be something happening just on the edges of your view or even completely out of view behind you. </p>
     <p class="english">That can be really effective when I’m working with fear, where there’s something you’re not sure of just at the edge of vour view, or when I’m working with people’s movements, I can give them something to follow around. And of course the ability to rather instantly share that sort of large-scale immersive experience with someone on the other side of the planet, without having to ship an installation to a museum. It’s close to being able to have a pure thought, a dream, and invite someone into it. </p>
     <br>
-    <img class="titlelogo" src="eric15.jpg">
+    <img class="titlepic" src="eric15.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 如今，VR / AI / AR仍在开发和探索中。您如何在艺术研究和艺术实践中更好地使用或应用它们？</p>
     <p class="english">In nowadays, VR / AI / AR is still in development and exploration. How can you use or apply them well in your art research and art practices?</p>
     <p class="chinese"><a class="big">Eric Millikin:</a>对我来说，正是因为VR / AI / AR在不断的发展，这成为了我工作中最有趣的一部分。对比起传统的媒体,有很多已经相当的完善了, 而且这些媒体限制了使用者的思想和固定模式,但实际上对于新媒体艺术家更需要的应该是不断的探索和实验,并且能够承担一定的风险和挑战。</p>
     <p class="english">To me that’s part of what makes them most interesting to work with. With older media, there’s so much that’s already been done, and often some audiences have a limited idea of what should be done in those media, but with new media by its very nature artists are more driven to be exploratory and experimental, and able to take some risks and make something provocative. </p>
     <br>
-    <img class="titlelogo" src="eric16.jpg">
+    <img class="titlepic" src="eric16.jpg">
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 能给开始使用VR / AI / AR的人们或学生一些建议或技巧吗？他们可以从哪里开始？您认为他们应该更关注哪一部分？</p>
     <p class="english">Could you give some recommendations or tips to the people or students who start work with VR / AI / AR? Where can they begin? Which part do you think they can pay more attention to? </p>
     <p class="chinese"><a class="big">Eric Millikin:</a>对于想要接触任何类型新媒体的人，我的主要建议很简单:开始吧! 记住，你的第一个作品可能是你最糟糕的作品。所以开始吧！做点什么，然后继续做更新更好的东西。我发现很多艺术家并不愿在新媒体工作,因为他们已经创建了一个舒适的传统媒体工作氛围和阶层,而且他们害怕会扔掉他们之前所学到的技能和思想并且一切得从0开始,但这并不全是真的。比如，如果有人是一名肖像画家，他想要开始在VR领域工作，他们仍然可以结合人物和面部表情在他新的作品中，他现在可以探索其他事物/领域，比如以一种他无法在有限维度的平面上探索的方式重新探索虚拟空间。</p>
@@ -131,7 +131,7 @@
     <p class="english">And I think that the idea of what is new and different about new media is something that can be a good place for an artist to begin, or a key thing to pay attention to while working. That is, keeping in mind: What is it about this new media that really interests them, what makes them want to use it? </p>
     <p class="english">For me, as an artist who is interested in how governments spread fear through lies and propaganda, I’m very interested in the “virtual” and the “artificial” so virtual reality and artificial intelligence give me a lot of room to explore. But for any other artist, these new media have vast unexplored potential for artists to dive into and take in new directions. And there will always be something new to explore tomorrow that we can’t even imagine today. </p>
     <br>
-    <img class="titlelogo" src="eric17.gif">
+    <img class="titlepic" src="eric17.gif">
     <br>
     <img class="titlelogo" src="eric-huayu.gif">
     <div class="information">
@@ -139,7 +139,7 @@
     <p class="english"> <a class="link" href="https://ericmillikin.com/" target="_blank">✤ 艺术家网站（Artist Website)</a></p>
     <p class="english"> <a class="link" href="https://www.instagram.com/ericmillikin/" target="_blank">✤ 个人INS(instagram): ericmillikin</a></p>
     <br>
-    <img class="titlelogo" src="eric-final.jpg">
+    <img class="titlepic" src="eric-final.jpg">
   </div>
   <br><br>
      <p class="big">木牙微信订阅号</p>
