--- a/home.html
+++ b/home.html
@@ -165,6 +165,17 @@
      </div>
 
    </div>
+   <div class="row">
+   <div class="column">
+     <div class="content">
+       <a href="braulio-html/index.html">
+       <img src="braulio-cover.gif" style="width:100%">
+       <h3>现实与虚拟的视觉转化 | Braulio Amado 「艺术访谈」</h3>
+       <p class="chinese">Bráulio Amado<br>
+        Bráulio Amado is a Graphic Designer and Illustrator from Portugal, currently living in New York City. He worked as a Designer at Pentagram NYC. Then joined Bloomberg Businessweek as an Art Director. Moved to Wieden+Kennedy. Then started his own studio in 2017. Since 2018 he co-runs SSHH, a mutant art space, classroom and store in the East Village of NYC.▷▷▷▷</p></a>
+     </div>
+   </div>
+ </div>
 
 
 
