--- a/huayiwenxin-html/index.html
+++ b/huayiwenxin-html/index.html
@@ -27,7 +27,7 @@
   <div class="container">
     <br>
     <p class="title_big">尚未踏入过的世界 | 画意文心-返景 「展览&访谈」</p>
-    <img class="titlelogo" src="huayuwenxin01.jpg">
+    <img class="titlepic" src="huayuwenxin01.jpg">
     <br>
     <p class="text">欢迎来到木牙Make Unique Young Arts，让我们来探索心中属于自己的那份风光～</p>
     <br><br>
@@ -46,7 +46,7 @@
     <p class="english"><a class="big">Chongewen Yu</a><br>
       Male, was born in Dandong in 1984.; He graduated from the first studio of Oil Painting Department of Luxun Academy of Fine Arts in 2007.; He stays and works in Beijing now.</p>
     <br><br>
-    <img class="titlelogo" src="yuchongwen01.jpg">
+    <img class="titlepic" src="yuchongwen01.jpg">
     <br><br>
     <img class="titlelogo" src="Q&A.gif">
     <br><br>
@@ -55,7 +55,7 @@
     <p class="chinese"><a class="big">于重文:</a>死亡是今人避讳的，我也如是。但又着迷于生命逝去的瞬间呈现出令人震撼的状态。绘画的表达方式很有限，《她们睡着了》是用一种偏写实的装饰画手法呈现的一幅画，也许是依依不舍，自我欺骗让心灵得以平静。</p>
     <p class="english">Death is taboo for most people, and so am I. But fascinated by the moment when life is lost takes on a state of shock. The expression of painting is very limited. "They Fell Asleep" is a painting presented with realistic decorative painting methods. It may be is reluctance on, but also is self-deception to calm the soul.</p>
     <br>
-    <img class="titlelogo" src="yuchongwen02.jpg">
+    <img class="titlepic" src="yuchongwen02.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a>光看您的画作，朦胧，透光，具有极大的写意色彩.画面中频繁出现了动物的身影。与您网站上的女性画作不同. 是什么让您改变角度开始关注在鸟类和羽毛？是否有某种暗示？而单独的雕塑画作又代表了什么？</p>
     <p class="english">Look at your painting, hazy, transparent, with great impressionistic colors. There are frequent images of animals in the painting. This is different from the paintings about women on your website. What made you change your perspective and start focusing on birds and feathers? Is there a hint? And what do individual sculptures and paintings represent?</p>
@@ -65,7 +65,7 @@
     </p>
     <p class="english">If I have to say something, painting a statue is a tribute to the master. At the beginning of learning painting, I often copy the master's work. I have a deep understanding. It is better to copy a painting once a thousand times. It is a wonderful experience of observing the world with the eyes of a master. You can find the feeling of crossing time ，space and overlapping time on the palette. I drew a large group of sculptures before. I was very excited and the whole process was fun. I even saw details that I couldn't find when I saw the original work at the Paris Opera. The feeling of comfort in my heart is difficult for me to express in words.</p>
     <br>
-    <img class="titlelogo" src="yuchongwen03.jpg">
+    <img class="titlepic" src="yuchongwen03.jpg">
     <br><br>
     <p class="chinese">🍃🍃🍃</p>
     <br><br>
@@ -76,7 +76,7 @@
     <p class="english"><a class="big">Zhengxin Liu</a><br>
       Born in Wangqing town, Jilin Province in 1983. In 2006, he graduated from the Painting major of Jilin College of The Arts. In 2009, he studied as a master of painting in Jilin College of The Arts. From 2010 to 2013, he studied and created in Jingcao Space studio of tutor Fang Lijun in Songzhuang. He lives in Beijing now.</p>
     <br><br>
-    <img class="titlelogo" src="liuzhengxin01.jpg">
+    <img class="titlepic" src="liuzhengxin01.jpg">
     <br><br>
     <img class="titlelogo" src="Q&A.gif">
     <br><br>
@@ -85,7 +85,7 @@
     <p class="chinese"><a class="big">刘政昕:</a>其实在我看来，微观世界就像是宏观世界的一个缩影，它们表现出来的存在其实取决于我们把观测点放在哪里。虽然一直在画油画，但从小开始练习书法使得我对于传统的中国山水画有着很深刻的视觉记忆，所以才会把这样一种自然纹理中山水画的气质呈现出来。</p>
     <p class="english">In fact, in my opinion, the micro world is like a microcosm of the macro world, and the existence of them depends on how we place our observation point. Although I have been painting oil paintings, I have been practicing calligraphy since I was a child has given me a deep visual memory of traditional Chinese landscape paintings, which is why I present the temperament of such a natural texture of landscape paintings.</p>
     <br>
-    <img class="titlelogo" src="liuzhengxin012.jpg">
+    <img class="titlepic" src="liuzhengxin012.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a>树皮是您对于微观和宏观世界的缩影，每张树皮都代表着一个世界，一个宇宙，或者一种风景...在自然科学里我们生活的世界被称为中观世界，在您看来，树皮这个媒介在用布面油彩的绘画方式呈现的过程中，它的功能性 / 角色扮演是如何发生转变的呢？</p>
     <p class="english">The bark is your epitome of the micro and macro world. Each bark represents a world, a universe, or a landscape... In natural sciences, the world we live in is called the middle world. Now, how has the function/role-playing of the bark medium been transformed in the process of painting with oil on canvas?</p>
@@ -93,7 +93,7 @@
     <p class="english">The content of my painting is based on the image of nature. The texture of the trees in the north is made up of many lives in the micro-world that we can't see with our eyes, maybe this is the creation of nature, the shapes they grow out of, and the artistic images of traditional Chinese paintings. It is so coincident, whether it is the composition or the content form, it contains countless kinds of changes and possibilities. So for me, one side is the awe of nature and the other side is the worship of traditional painting. I am just a transmitter, changing a medium, and putting them on the canvas.
     </p>
     <br>
-    <img class="titlelogo" src="liuzhengxin03.jpg">
+    <img class="titlepic" src="liuzhengxin03.jpg">
     <br><br>
     <p class="chinese">🌿🌿🌿</p>
     <br><br>
@@ -105,7 +105,7 @@
       Born in Jilin in 1981.He graduated from Jilin College of the Arts in 2006.
       Nanhu Painting Exhibition, Changchun in 2006. Caochangdi Art Exhibition, Beijing in 2007. Founded Duolan Studio in 2007. Songzhuang Art Festival, Beijing in 2013. The second "Splendid China Cup" National Painting and Calligraphy Art Competition in 2019. Songzhuang Art Festival "Quick Buy Art", Beijing in 2019. "Songzhuang Discovery" Invitational Exhibition of Sketching from Life in 2020. painting Wenxin "Return to The Scene" exhibition of four contemporary Paintings in 2020.</p>
     <br><br>
-    <img class="titlelogo" src="chenma01.jpg">
+    <img class="titlepic" src="chenma01.jpg">
     <br><br>
     <img class="titlelogo" src="Q&A.gif">
     <br><br>
@@ -114,14 +114,14 @@
     <p class="chinese"><a class="big">陈马:</a>正如您所说，自然界是不断变化的，若是画面和描绘对象一一对应的审美观来描绘，那肯定是不现实的。好在油画是一种通过颜料这种媒介来表达作者感受的艺术。每次面对自然风光，我会首先有一种感受，然后所有进入眼帘的视觉现象都为这种感受服务，再以笔，色，油等画材加以实现。我定格的不是色彩和瞬间场景，而是感受。</p>
     <p class="english">As you said, the natural world is constantly changing, and it would definitely be unrealistic if the picture and the object to be depicted correspond to the aesthetics. Fortunately, oil painting is an art that expresses the author's feelings through the medium of paint. Every time I face the natural scenery, I will first have a feeling, and then all the visual phenomena that come into my eyes serve this feeling and then realize it with a brush, color, oil, and other painting materials. What I freeze is not color and momentary scenes, but feelings.</p>
     <br>
-    <img class="titlelogo" src="chenma02.jpg">
+    <img class="titlepic" src="chenma02.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a>画乡村生活的画作有许多，您的独特之处在哪?自己擅长的领域和自己喜欢的事物在通过生活的过滤后形成您现在的风格，您是否想通过画作得到真正意义上的改变？还是说画作只是在回味记忆中的美好？</p>
     <p class="english">There are many paintings of country life. What is unique about you? Your field of expertise and things you like and form it becomes your current style after filtering through life. Do you want to get a real change through your paintings? Or is it the paintings that are just reminiscent of the beauty in memory?</p>
     <p class="chinese"><a class="big">陈马:</a>我觉得我的独特之处在于感受，每个人的感受都是不同的，这也是每个人的风格，我擅长的和喜欢的都是绘画，二者结合一起，我一直在感受我生活的世界，并通过绘画这一方式表达出来。</p>
     <p class="english">I think my uniqueness is my feeling. Everyone’s feelings are different. This is also everyone’s style. What I am good at and what I like is painting. Those things combine together are what I have been feeling in the world where I live. And I will express it through my painting.</p>
     <br>
-    <img class="titlelogo" src="chenma03.jpg">
+    <img class="titlepic" src="chenma03.jpg">
     <br><br>
     <p class="chinese">🌾🌾🌾</p>
     <br><br>
@@ -132,7 +132,7 @@
     <p class="english"><a class="big">Shilong Wei</a><br>
       Born in Fushun, Liaoning in 1983.He graduated from the oil painting major of Jilin College of The Arts in 2006. He lives and works in Beijing.</p>
     <br><br>
-    <img class="titlelogo" src="weishilong01.jpg">
+    <img class="titlepic" src="weishilong01.jpg">
     <br><br>
     <img class="titlelogo" src="Q&A.gif">
     <br><br>
@@ -147,19 +147,19 @@
     <p class="english">I am often moved by some beautiful things. It may be a distant mountain in the early morning, it may be a dense forest, or it may be a piece of withered wildflowers or a beautiful girl. This kind of beauty is touching, but the beautiful things are fleeting, just like the two rainbows that appeared in the sky this afternoon and the burning clouds in the evening. They are beautiful and short-lived! From the perspective of time, they disappeared, but they are frozen in the spirit and become a kind of feeling and memory. This kind of memory is different from photography, and more of my personal emotions, those are my happiness and pain. Those emotions are also mixed in my work. When I recalled that feeling again, there was like a memory with more emotion in it.</p>
     <p class="english">I did not deliberately create a blurred image, what I want to control is the visual effect, a suitable visual effect that matches the current mood, and moves me for mine creation. The content that the picture itself could carry is very limited. My narrative is very open. I hope that the picture is "living". The viewers have their own emotions and understanding of the painting. The picture is definitely not the only meaning. There will be different understandings of different emotions.</p>
     <br>
-    <img class="titlelogo" src="weishilong02.jpg">
+    <img class="titlepic" src="weishilong02.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a>您的创作周期是多长呢？您是如何看待当下艺术作品流入市场后成为拍卖的商品的现状的呢？</p>
     <p class="english">How long is your creative cycle? How do you see the status quo of artworks that have become auctioned goods after they have entered the market?</p>
     <p class="chinese"><a class="big">魏世龙:</a>我先回答第一个问题，我经常是几张画一起画，在一两个月的时间里同时画三到五张画，一张画画久了会没有感觉，这样可以换一换脑子，也能提高效率。平时如果有啥好的想法先记录下来，不着急画，过一段时间如果还是有感觉那就可以动笔了。至于艺术品流入二级市场这个问题我也没有什么发言权，只是希望真拍越来越多，假拍越来越少吧。</p>
     <p class="english">Let me answer the first question first. I often paint several pictures together. I paint three to five pictures at the same time in a month or two. After I focus on a painting for a long time, I don’t feel anything, so I can change my mind and switch to another. It can also improve efficiency. If I usually have any good ideas, I will write them down first, don't worry about drawing them, and if  the feel still there after a while, I will start painting them. As for the inflow of art into the secondary market, I haven't things to say. I just hope that there will be more and more real shots and fewer fake ones.</p>
     <br>
-    <img class="titlelogo" src="weishilong03.jpg">
+    <img class="titlepic" src="weishilong03.jpg">
     <br><br><br><br>
-    <img class="titlelogo" src="huayuwenxin-flower.gif">
+    <img class="titlepic" src="huayuwenxin-flower.gif">
     <p class="chinese">所谓“美”，不过是人类的一种认知范式，标准并非总是一成不变。它不能被简单概括为体重计上的数字，而是关于健康、自信、力量和光芒，关于感受爱、看见诗，关于一切闪耀却轻易溜走的细节，关于生命本身。— 画意文心-返景(座右铭）</p>
     <br><br><br><br>
-    <img class="titlelogo" src="huayiwenxin-final02.jpg">
+    <img class="titlepic" src="huayiwenxin-final02.jpg">
     <br><br><br>
     <div class="information">
     <p class="chinese"><a class="big">展览地址&时间 \ Exhibition Address & Time</a></p>
@@ -167,7 +167,7 @@
     <p class="english">✤ 内容: 画意文心-“返景”四人油画作品展 </p>
     <p class="english">✤ 地址 / Address: 北京市东城区沙滩路的玺庭空间</p>
     <br>
-    <img class="titlelogo" src="huayuwenxin-final03.jpg">
+    <img class="titlepic" src="huayuwenxin-final03.jpg">
     </div>
     <br><br>
      <p class="big">木牙微信订阅号</p>
