--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -104,6 +104,11 @@
 <img class="titlelogo" src="splopdesign3d.gif">
 </div>
 </div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="braulio-amado-flower.gif">
+</div>
+</div>
 </div>
 
 
