--- a/liulight-html/index.html
+++ b/liulight-html/index.html
@@ -27,7 +27,7 @@
   <div class="container">
     <br>
     <p class="title_big">与其拥抱浪漫的理想，你必须面对每一段破碎爱情的意义 | Liu Light</p>
-    <img class="titlelogo" src="liulight.jpg">
+    <img class="titlepic" src="liulight.jpg">
     <br>
     <p class="text">欢迎来到木牙Make Unique Young Arts，让我们一起来探索让人深夜崩溃的爱情！</p>
     <br><br>
@@ -43,9 +43,9 @@
     <p class="english"><a class="big">Liu Light</a><br>
   Liu Light is a visual artist, poet, and musician currently based in New York. They were born in Detroit, lived in Shanghai for two years as a young child, and grew up in Virginia, where they also went to college and was involved in the DIY arts and music scene for several years. Their work spans experimental illustration, animation, books, video work, performance, and more. They have exhibited and sold their work in zine fairs and art books fairs, and performed music and poetry in venues in New York, Richmond, and DC. </p>
     <br><br>
-    <img class="titlelogo" src="liulight-02.jpg">
+    <img class="titlepic" src="liulight-02.jpg">
     <br><br>
-    <img class="titlelogo" src="liulight-03.jpg">
+    <img class="titlepic" src="liulight-03.jpg">
     <br><br>
     <img class="titlelogo" src="chuangzuochuzhong.gif">
     <br>
@@ -53,9 +53,9 @@
     Light’s work generally involves themes of selves and selfhood, subject/object, deconstruction of the body, and fantasy, dream, & multiplicities of reality. They also play with recontextualized and “remixed” elements of Chinese culture, spirituality, and mythology through a diasporic, personal lens. </p>
     <p class="chinese">Light的作品通常涉及自我和人格、主体/客体、身体的解构、幻想、梦想和现实等的多样性主题。作品还通过一种散漫的、个人的视角，对中国文化、灵性和神话进行重新语境化和重新混合元素。</p>
     <br><br>
-    <img class="titlelogo" src="liulight-04.jpg">
+    <img class="titlepic" src="liulight-04.jpg">
     <br><br>
-    <img class="titlelogo" src="liulight-05.jpg">
+    <img class="titlepic" src="liulight-05.jpg">
     <br><br>
     <img class="titlelogo" src="Q&A.gif">
     <br>
@@ -66,7 +66,7 @@
     <p class="chinese">作为一个音乐家，我主要认为自己是一个作词者和歌手/声乐家，而不是能够演奏任何乐器或制作音乐。我的音乐是诗歌的表现;我在诗歌上花了很多心思，每一次表演都是一个机会，通过身体吸收不同的语言和思想。我的身体、心情、地点和在场的人对我每一次的表演和对音乐的诠释都很重要。我更多的是将我的视觉作品融入到我的音乐和表演中。我觉得把我所有的艺术兴趣——视觉艺术，音乐，诗歌，身体——结合在一起，也许我可以创造一个只有我存在的现实，只要表演持续。如果我在这个世界上生存太难的话，我就得自己创造一个。</p>
     <p class="english">As a musician, I mainly consider myself a lyricist and singer/vocalist more so than being able to play any instruments or produce music. My music is a manifestation of poetry performance; I put a lot of care into what I write, and every performance is an opportunity to interpret the words and intent differently, by ingesting it through the body. I want the body, the mood, the place, the specific people who are present, to be important to each of my performances and interpretations of my music. I’ve been playing more with integrating my visual work into my music and performances too. I feel that in bringing together all of my artistic interests -- visual art, music, poetry, body -- maybe I can create a reality that I can exist in fully, just for as long as that performance lasts. If it’s too hard to exist in this world as it is, I’ll have to make my own.</p>
     <br>
-    <img class="titlelogo" src="liulight-06.jpg">
+    <img class="titlepic" src="liulight-06.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a>看到了你已出版的漫画书 mirror in the mirror (光)，整本书从绘制，印刷到最后的装订的整个出版步骤，有哪一部分是让你觉得兴奋的？并且，你能分享给我们一些自我出版的经验吗？</p>
     <p class="english"> In your comic book Mirror in the mirror (光), when you handle the whole process of the publication including the drawing, and binding, which part did you feel really excited about? Also, could you share with us some experience about how to self-publish? (For example, the selection of material, bookbinding methods or any else) </p>
@@ -76,21 +76,21 @@
     </p>
     <p class="english">I think it’s important to think about the material of the binding and how it interacts with the meaning of the book itself; for example, in using binder rings for my book binding, not only was it much simpler and cleaner than stapling, gluing, or sewing, I also liked having the cold metal of the rings contrasting the soft and intricate nature of my artwork. I liked that it was mostly quite sturdy, but still had a delicate, breakable quality; I liked the perverseness of giving my reader the option to unbind and undo my book if they really wanted to. I also think it’s important for me to print and publish as cheaply as possible, because I greatly value accessibility in my work; there’s no point to me making my art if it becomes too expensive for my friends to afford, or if it’s so precious and fragile that it couldn’t take the beating of regular use. I want my work to be both beautiful and useful. </p>
     <br>
-    <img class="titlelogo" src="liulight-07.jpg">
+    <img class="titlepic" src="liulight-07.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 创作绘画故事时是如何创作的呢？有结合生活中的事情作为背景吗？图像中的人物是否是自己的缩影呢？</p>
     <p class="english">How do you build a story for your comic book? Is there a reference to life events? Is the figure in the image a miniature of yourself? </p>
     <p class="chinese"><a class="big">Liu Light:</a>我通常从自己的生活和情感经历中提炼出故事，并把它们变成幻想和梦想。我把我想表达的情感“核心”拿出来，为它创造一个其他人也可以进入的新世界。虽然我熟悉常用的讲故事技巧，但我并不像主流漫画那样真正地使用它们。我选取一些片段，把它们变成适合我自己的idea。因为我想讲的故事不属于主流故事所能涵盖的范围。实际上，我以前写的自传作品比现在多得多。我现在想，我喜欢把我的经历“赠送”给我的角色和人物，我认为他们是我的一部分，但不是真正的我。我越来越擅长创造和书写汉字;我想继续朝这个方向前进，把我的原始自我从我的作品中分离出来。我每次都把自己的全部投入到我的艺术中，但我的艺术并不是直接的“我”，我认为这是一个很重要的区别。</p>
     <p class="english">I usually make stories by drawing from my lived and emotional experiences and making them into fantasies and dreams; I take the emotional “core” of what I want to express and create a new world for it that others can enter into. Though I’m familiar with common storytelling techniques, I don’t really use them like mainstream comics would; I take bits and pieces and twist them to suit my own goals, because the stories I want to tell fall outside of what mainstream storytelling is able to encompass. I actually used to make much more autobiographical work than I do now. I think now, I like to “give away” my experiences to my characters and figures, who I consider to be of me, but not actually me. I’m getting better at creating and writing characters; I want to keep moving in this direction to separate my raw self from my work more. I put all of myself into my art, every time, but my art isn’t directly “me,” and I think that’s an important distinction to make. </p>
     <br>
-    <img class="titlelogo" src="liulight-08.jpg">
+    <img class="titlepic" src="liulight-08.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 在你的作品中连续不断的出现了空洞，映射的是身体的空洞还是宣泄的出口？</p>
     <p class="english">There are many elements of holes in your works. Do these reflect the empty body parts or the outcomes of the character's emotional release? </p>
     <p class="chinese"><a class="big">Liu Light:</a>我还没有完全弄明白我的洞是什么意思，但我认为它们普遍反映了一种道家的空虚感，而不是虚无，并玩弄着存在和缺失的意义。它们指的是一种不完整的感觉，一种失去重要东西的感觉，但也指的是消费和潜力。我喜欢 “洞” 带来的问题。我想知道的是，即使一个人失去了自己重要的一部分，他们还能被认为是完整的吗?它是一个什么都没有的洞，还是一个接口，一个入口?如果你掉进一个洞里，你会被吞没吗?或者你会到达一个你现在看不到的新地方吗?是谁在你身上留下了这个洞——别人，你自己，你在别人身上看到的自己?把这个洞挖出来，或者把它填进去，这两种选择都是非常痛苦的——但是如果值得呢?你觉得它值多少钱?</p>
     <p class="english">I haven’t entirely figured out what the meanings of my holes are yet, but I think generally they reflect a sense of Daoist emptiness, but not nothingness, and play with the meaning of presence and absence. They reference a feeling of not being complete, missing something important, but also of consumption, and potential. I like the questions that holes bring up. It’s like I want to know -- even when someone is missing a vital part of themselves, can they still be seen as complete for what they are? Is it a hole with nothing in it, or is it an interface, a portal? If you fall into a hole, will you be consumed or will you arrive at a new place that you just can’t see right now? Who put that hole in you -- someone else, yourself, the reflection of yourself that you found in someone else? Carving out the hole, or choosing to fill it in, either choice is incredibly painful -- but what if it’s worth it? What would make it worth it to you? </p>
     <br>
-    <img class="titlelogo" src="liulight-09.jpg">
+    <img class="titlepic" src="liulight-09.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 我读到你的作品中有进行人物爱情的讨论，你认为爱情中最好的，最舒适的相处模式又是怎么样的呢？</p>
     <p class="english">There are some works related to the discussion of lover relationships. What do you think about love? Which is the best or most comfortable relationship for you in love? </p>
@@ -99,7 +99,7 @@
     <p class="chinese">至于浪漫的爱情，我会引用邱妙津的话：“关于如何相爱：除了拥抱浪漫的理想，您还必须面对每一个破碎的爱情的含义。”我最舒适，最健康的恋爱关系是与我最亲密的朋友在一起，我非常珍惜他们。我希望在所有亲密关系中都能获得丰富的情感，在这里我们可以一起学习彼此以及新的爱情方式。我所有令人满意的关系背后都有相似的核心，它们来自于相互尊重，精神/情感平衡和深切关怀。</p>
     <p class="english">As far as romantic love goes, I defer to this quote by Qiu Miaojin: “On how to love well: Instead of embracing a romantic ideal, you must confront the meaning of every great love that has shattered, shard by shard.” My most comfortable and healthy love relationships are with my closest friends, whom I really cherish. I look for a depth of emotional richness in all of my close relationships, where we can learn together about each other and new ways of loving. All of my most fulfilling relationships stem from a similar core place of mutual respect, spiritual/emotional parallelism, and deep care. </p>
     <br>
-    <img class="titlelogo" src="liulight-10.jpg">
+    <img class="titlepic" src="liulight-10.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a>现在从事着什么样的工作呢？和上学期间又有什么样的不同？（如果有工作）是如何找到现在的这份工作的呢？</p>
     <p class="english">Which job do you do now? How did you find this job and why did you choose to work on that? What is the difference between life in working in society and life in studying at school? </p>
@@ -108,13 +108,13 @@
     <p class="chinese">我认为，如果您有幸不用上班只专心读书（那是我以前的事情！），那么您会天真地对自己负责任，并且可以避免失败带来的后果。上学，特别是作为一个“特权”学生，去上学往往是一种与现实世界隔绝的经历。您更有机会专注于“纯知识性”主题。现实世界中存在着更多的风险，并且系统运作的方式有许多复杂的原因，它们会直接影响你的生活质量，而且没人会告诉你或者为你做好准备。当你必须工作以求生存时，很容易忘记自己的身份和真正想要的东西。以及当你精疲力竭地度过每一天，一个星期，甚至一个月时，都想着如何在身体，情感和精神上照顾自己。如果您是黑人/土著人/有色人种，酷儿/跨性别，残障，神经发散，低收入，无证件等等，则所有这些因素都会导致问题复杂化。</p>
     <p class="english">I think if you are lucky enough to go to school without having to work (which I was!), you get to be more naive to the reality of being responsible for yourself, and you’re buffered from the consequences of failure. Going to school, especially as a privileged student, tends to be an experience isolated from the reality of the working world. You’re more able to focus on “purely intellectual” subjects. There’s more at stake in the real world and there’s many complex reasons for the way the system works, which can intimately affect your quality of life and which no one tells you about or prepares you for. When you have to work to survive, it’s easy to lose sight of who you are, what you really want, and how to take care of yourself physically, emotionally, and spiritually when you’re exhausted from just trying to make it through another day, week, month, all of which is compounded if you are Black/Indigenous/person of color, queer/trans, disabled, neurodivergent, low-income, undocumented, and so on. </p>
     <br>
-    <img class="titlelogo" src="liulight-11.jpg">
+    <img class="titlepic" src="liulight-11.jpg">
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a>CATNAP friends 的形象非常深入人心，可以聊聊是怎么想到这样一个玩偶形象的呢？</p>
     <p class="english">The CATNAP Friends image is very impressive. Can you talk about how you came up with this doll image? </p>
     <p class="chinese"><a class="big">Liu Light:</a>谢谢！我以前喜欢画许多奇奇怪怪的东西，形状和不同品种的猫，而异形猫的特别使我脱颖而出。他既简单，可爱，又带着一种吸引又迷人的搞怪。他是一个非常有表现力的形象，是以一种微妙的方式。我画了很多以异形猫和他的朋友为特色的恶搞漫画，并展示了异形猫的抽象力量。我与我最亲密的朋友之一Kotone Deguchi合作，使他成为了一只长毛绒猫。Kotone Deguchi应该获得所有的表扬，是他们让异形猫变成了实体玩具，他们接受了我的设计并为异形猫设计了定制图案，我选择了一些面料，然后以大异形猫的形式和小钥匙扣形式缝制了整堆异形猫。 然后，我创建了一些有趣的图形来宣传这些异形猫，并在COVID之前的工艺品展和漫展上将其出售，现在又在线上销售，然后我们将所生产的产品进行拆分。 Kotone和我组成了一支非常出色的团队。<3 </p>
     <p class="english">Thank you! I used to enjoy drawing many weird forms and shapes and varieties of cats, and the alien cat character was the one that stood out to me as something simple, cute, and also kind of weird in a charming way that people are attracted to. He’s a very expressive character but in a subtle way, and I drew all these silly comics that feature him and his friends and show off his abstract powers. I collaborated with one of my closest friends, Kotone Deguchi, to make him into a plush. They deserve all the credit for actually making him into a doll -- they took my design and drafted a custom pattern for the plush, I chose some fabrics and they sewed a whole bunch of the plushes in a big plush form and a small keychain form. I then created some fun graphics to promote the plushes and sold them at craft and zine fairs pre-COVID, and now online, and we split whatever we make. Kotone and I make a really great team. <3 </p>
     <br>
-    <img class="titlelogo" src="liulight-12.jpg">
+    <img class="titlepic" src="liulight-12.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a>把想法化作实践落地是令人兴奋的事情，CATNAP friends 从图纸到玩偶到售卖，具体花费多长时间又经历了哪些步骤呢？是否是手工制作，如果不是又是如何联系到厂家的呢？</p>
     <p class="english">It’s exciting to put an idea into practice. CATNAP Friends goes from drawing to dolls to selling. How long does it take? Is it handmade, and if not, how do you contact the manufacturer? </p>
@@ -126,16 +126,16 @@
     <source src="movie.ogg" type="video/ogg">
     </video>
     <br><br>
-    <img class="titlelogo" src="liulight-flower.gif">
+    <img class="titlepic" src="liulight-flower.gif">
     <br><br>
-    <img class="titlelogo" src="liulight-14.jpg">
+    <img class="titlepic" src="liulight-14.jpg">
     <br><br><br>
     <div class="information">
     <p class="chinese"><a class="big">艺术家个人联系方式</a></p>
     <p class="english"> <a class="link" href="https://liulight.com/" target="_blank">✤ 艺术家网站（Artist Website)</a></p>
     <p class="english"> <a class="link" href="https://www.instagram.com/liu.light/?hl=en" target="_blank">✤ 个人INS(instagram): liu.light</a></p>
     <br>
-    <img class="titlelogo" src="liulight-final.jpg">
+    <img class="titlepic" src="liulight-final.jpg">
   </div>
   <br><br>
      <p class="big">木牙微信订阅号</p>
