--- a/shiyouzhong-html/index.html
+++ b/shiyouzhong-html/index.html
@@ -27,7 +27,7 @@
    <div class="container">
      <br>
      <p class="title_big">明暗之间看见色彩 | 施又中</p>
-     <img class="titlelogo" src="shiyouzhong01.jpg">
+     <img class="titlepic" src="shiyouzhong01.jpg">
      <br>
      <p class="text">欢迎来到木牙Make Unique Young Arts，让我们一起来探索那被我们遗忘的日常！</p>
      <br><br>
@@ -36,18 +36,18 @@
      <p class="chinese">不管是看着天空，身处树林，乘船垂钓，倾听鸟鸣，策马扬鞭，还是演奏琴曲.....我们都需要找到心中的那片宁静，然后才能回看初心，思考未来。而今天来到木牙MUYA做客的画家施又中，把她心中的这片宁静分享给大家～让我们来一起跟随她的眼睛来欣赏这别样的美景和倾听她对于作画独特的见解吧！</p>
      <p class="english">Whether it's looking at the sky, being in the woods, taking a boat to fish, listening to birds, riding horses to whip, or playing music... We all need to find that peace of mind before we can go back to our original mind and think about the future. Today, the painter Shi Youzhong comes to MUYA to share the peace in her heart. Let's follow her eyes to enjoy the beautiful scenery and listen to her unique views on painting.</p>
      <br><br>
-     <img class="titlelogo" src="shiyouzhong02.jpg">
+     <img class="titlepic" src="shiyouzhong02.jpg">
      <br>
      <p class="chinese"><a class="big">施又中</a><br>1972 年出生于台湾,毕业于中国文化大学戏剧学系。现专职艺术创作,绘画资历超过 10 年,以西画压克力彩及水彩为主要创作媒材。曾参加多次台湾之联展及个展,作品亦受邀至美国纽约、韩 国、南美洲、东欧、中东地区展出。</p>
       <p class="english"><a class="big">SHI YOUZHONG</a><br>
      She was born in Taiwan in 1972 and graduated from the Drama Department of Chinese Culture University. She is a professional artist with over 10 years' painting experience. She is mainly engaged in acrylic and watercolor painting. </p>
      <p class="english">Her works have also been exhibited in New York, South Korea, South America, Eastern Europe and the Middle East. Her works are based on nature, and she loves nature's rich variety of colors and seasons. The application of bright saturated color, by irregular shape and different chroma color blocks interlacing configuration, in a plain painting way, to simplify the details of the objective scenery. It emphasizes the coordination between color and form, presents the spatial, rhythmic and freehand sense of color, and creates new images and resonances in vision, which is my praise to nature and also a way to express myself.</p>
      <br><br>
-     <img class="titlelogo" src="shiyouzhong03.jpg">
+     <img class="titlepic" src="shiyouzhong03.jpg">
      <br><br>
-     <img class="titlelogo" src="shiyouzhong04.jpg">
+     <img class="titlepic" src="shiyouzhong04.jpg">
      <br><br>
-     <img class="titlelogo" src="shiyouzhong05.jpg">
+     <img class="titlepic" src="shiyouzhong05.jpg">
      <br><br>
      <img class="titlelogo" src="shenghuoxinde.gif">
      <br>
@@ -55,9 +55,9 @@
      <p class="english">
       "I don't have my own studio, my room is where I paint, and I have an easel and a little folding table, This is where all of my work is done. I hope I can have an independent studio in the future so that I can use it freely without worrying about the size of space."</p>
     <br><br>
-    <img class="titlelogo" src="shiyouzhong06.jpg">
+    <img class="titlepic" src="shiyouzhong06.jpg">
     <br>
-    <img class="titlelogo" src="shiyouzhong07.jpg">
+    <img class="titlepic" src="shiyouzhong07.jpg">
     <br><br>
     <img class="titlelogo" src="chuangzuochuzhong.gif">
     <br>
@@ -77,7 +77,7 @@
     <p class="english">I hope to present a gentle and peaceful harmony through my paintings, and to bring happy , relaxing and positive energy to the viewer to heal their mood. I believe that art is the best portrayal of the soul, and the process of creation is to reflect the heart and beauty. </p>
     <p class="chinese">Besides emotional catharsis, it is also a kind of healing. The more contact with art, people's beauty and soul can also be improved relatively. I hope that through the temperature of the paintbrush to comfort the loneliness in the heart of people, or to enrich the satisfaction of the soul, painting all kinds of beautiful worlds.</p>
     <br>
-    <img class="titlelogo" src="shiyouzhong08.jpg">
+    <img class="titlepic" src="shiyouzhong08.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a>您的绘画,绘制出了色彩缤纷的世界,颜色的明度高,纯净度也很高,这些颜色在大自然中是很难见到的,您是如何通过内心的需求和大自然环境的真实色彩衡量取色,并进行色彩解构的呢? </p>
     <p class="english">Your paintings paint a colorful world with high brightness and purity. These colors are hard to see in nature. How do you measure and deconstruct colors through your inner needs and the true colors of the natural environment?</p>
@@ -88,7 +88,7 @@
     <p class="english">I personally love the silhouette type image style, its high contrast and simplify the image to make it look like a construction by rough cut sheets of colored paper, I will use this style in my painting, in order to make the overall visual harmony, so need to all sorts of color to mediate the restructuring, let paintings eventually present a colorful and coordination effect.</p>
     <p class="english">I don't want to copy nature. I don't think any color is absolutely good or bad, only whether the relationship between color and color is right or not. If the right color and weight are placed in the right position, the beauty and space can be created, which is the unique style of my works.</p>
     <br>
-    <img class="titlelogo" src="shiyouzhong11.jpg">
+    <img class="titlepic" src="shiyouzhong11.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 为什么会想到以平涂的表现方式来作为自己的独特的绘画风格?在您的简介中说到「线是不存在的,明暗也不存在,只存在色彩之间的对比。」可以详细介绍想法来源吗? </p>
     <p class="english"> Why do you think of using flat paint as your own unique painting style? In your introduction, it says, "There is no line, there is no light and shade, there is only contrast between colors." Can you elaborate on the source of the idea?</p>
@@ -101,7 +101,7 @@
     <p class="english">I choose the way of color block composition because I think this way can make the image present a good sense of three-dimensional, and the composition of flat color blocks has more tension than the traditional realistic painting. Such color blocks are like a large piece of color paper, stacked layer by layer to give a depth of field and three-dimensional sense. This style of silhouette attracts me very much, which can give people more reverie and interest. I think the flat paint without shadow can bring the stereo effect and volume feeling as well, the bright color has the adornment effect more.
     </p>
     <br>
-    <img class="titlelogo" src="shiyouzhong12.jpg">
+    <img class="titlepic" src="shiyouzhong12.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 看到您的很多画作都有搭配您自己创作的诗歌,诗歌的创作和图像的绘制是不同的艺术传达方式,在您看来,文字,图形,色彩的表现方式存在着怎样的关系呢?</p>
     <p class="english">Seeing that many of your paintings are accompanied by poems created by yourself, the creation of poems and the drawing of images are different ways of artistic communication, In your opinion, what is the relationship between the expression of text, graphics and color?</p>
@@ -111,7 +111,7 @@
     <p class="english">I want to try to express my inner feelings in the form of words, which is a kind of self-training. I hope that by presenting "imagery" in the words of poetry and combining it with the visual expression of painting, the artistic conception and verisimum of poetry. </p>
     <p class="english">Painting can be integrated into the painting while the audience enjoys the painting, so as to achieve the artistic conception of "Painting in Poetry, Poetry in Painting". "Poetry is invisible painting, painting is tangible poetry" is just like reading a good poem can feel the beauty of a painting, while watching a painting, can feel the beauty of a poem.</p>
     <br>
-    <img class="titlelogo" src="shiyouzhong13.jpg">
+    <img class="titlepic" src="shiyouzhong13.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 画家的职业有别于常规早八晚五的职业作息,你觉得画家独特的工作状态和工作经历在你的生活中占据着什么样的色彩呢?</p>
     <p class="english">The profession of painter is different from the regular 8 to 5 professional work and rest, you feel the painter's unique working state and work experience in your life. What kind of colors do they occupy?</p>
@@ -122,7 +122,7 @@
     <p class="english">Another painter's unique state of work will cause confusion and ridicule. Because the economic source of the problem is the most realistic, I will emulate continuous creation to participate in many domestic and international exhibitions. To give myself more opportunity to increase the chance of exposure and try new things. In addition to enriching their own inner, setting a goal for yourself is also very important! </p>
     <p class="english">In a word, the path of a painter is not easy and lonely, but it is our choice. Many people give up and quit in the middle of the road, and many people's dreams are killed in reality before they start. So put your mind, stick to it, and don't forget the original intention. I think this is the mentality that you must have as a painter!</p>
     <br>
-    <img class="titlelogo" src="shiyouzhong14.jpg">
+    <img class="titlepic" src="shiyouzhong14.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a>是什么原因让作为戏剧系毕业的您,转做画家?您觉得戏剧系的学习,对您之后的绘画经历中有什么助力吗?</p>
     <p class="english">What is the reason for you, who graduated from the drama department, to become a painter? What kind of department has contributed to your later painting experience when you study the drama?</p>
@@ -131,7 +131,7 @@
     <p class="english">I think the essence of any art is interlinked, drama, like art, music. They are the most primitive human mind pursuit, natural instinct, the very least way to enjoy life. Their demands are caused by the ability to "move" inner emotional identity, so learning drama is not conflict with being a painter, it is a way of self emotional expression.</p>
     <p class="english">Since I started painting, I have been interested in it, because it can bring me strength, peace, moving and a sense of achievement! I love color very much, implicit color makes people feel warm and harmonious; Strong colors can be inspiring, eye-catching and joyful; Dark colors make people calm and cool; The matching of contrasting colors makes the picture jump; The coordination of colors makes the picture more stable, and the application of many colors is just like the director of the drama is the highest "artistic" creation.</p>
     <br>
-    <img class="titlelogo" src="shiyouzhong15.jpg">
+    <img class="titlepic" src="shiyouzhong15.jpg">
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 在成为画家期间道路是不是总是一帆风顺的?经历过哪些挑战吗?or 在经历事业困难期时是怎么度过的?</p>
     <p class="english">Was it always a smooth path to become a painter? Have you experienced any challenges? Or what do you do when you go through a difficult period in your career? </p>
     <p class="chinese"><a class="big">施又中 Youzhong Shi:</a>从念小学时就喜欢画画、音乐,后因升学压力的关系,上初中后就停止这些学习了。直到36 岁前经历了一些人生的低潮期,觉得为何不去做自己真正喜欢的事情,后来想到既然喜欢艺术那就去学画画吧!在2012 年我办了一个小个展,得到许多亲朋好友们的鼓励与支持,后来从2014 年起参加了许多艺博会,作品也入选了一些比赛,给了我很大的信心与成就感,找到了属于自己真正的梦想。</p>
@@ -139,16 +139,16 @@
     <p class="english">I liked painting and music when I was in primary school, but I stopped when I was in junior high school due to the pressure of entering higher school. Before the age of 36, I experienced some low points in my life. At that point I thought about why I am not doing what I really like. Later, I thought that since I like art, I should learn painting. In 2012, I held a small solo exhibition, which was encouraged and supported by many friends and relatives. Later, I participated in many art fairs since 2014, and my works were selected in some competitions, which gave me great confidence and a sense of achievement, and I found my true dream.</p>
     <p class="english">Later in 2015, with the support of my family, I devoted myself to painting. I am very grateful to the friends who helped me along the way. The path of the painter is rugged and lonely, which requires great enthusiasm and perseverance to continue. "Stick to the end, don't forget the original intention" has confirmed my love and persistence for painting. Every life experience is the most precious life experience, and now we are the collection of past experiences. I believe in doing what I like, putting a good attitude, life has its own arrangement! It's never too late to start as long as you find something you love to do!</p>
     <br>
-    <img class="titlelogo" src="shiyouzhong16.jpg">
+    <img class="titlepic" src="shiyouzhong16.jpg">
     <br>
-    <img class="titlelogo" src="shiyouzhong-flower.gif">
+    <img class="titlepic" src="shiyouzhong-flower.gif">
     <div class="information">
     <p class="chinese"><a class="big">艺术家个人联系方式</a></p>
     <p>✤ 邮箱 | Email: cat2791@gmail.com </p>
     <p class="english"> <a class="link" href="http://www.flickr.com/photos/emilyshih/" target="_blank">✤ 艺术家网站（Artist Website)</a></p>
     <p class="english"> <a class="link" href="http://www.instagram.com/cat2791" target="_blank">✤ 个人INS(instagram): cat2791</a></p>
     <br>
-    <img class="titlelogo" src="shiyouzhong-final.jpg">
+    <img class="titlepic" src="shiyouzhong-final.jpg">
   </div>
   <br><br>
      <p class="big">木牙微信订阅号</p>
