--- a/xuewu-html/index.html
+++ b/xuewu-html/index.html
@@ -27,7 +27,7 @@
    <div class="container">
      <br>
      <p class="title_big">对话禅修艺术 | 郑学武</p>
-     <img class="titlelogo" src="xuewu.jpg">
+     <img class="titlepic" src="xuewu.jpg">
      <br>
      <p class="text">欢迎来到木牙Make Unique Young Arts，让我们一起来探索艺术家的禅修！</p>
      <br><br>
@@ -36,7 +36,7 @@
      <p class="chinese">艺术家通过不断的禅修和冥想脱离困扰和诱惑，用自己的艺术作品展示自己对人类，社会，环境，乃至整个世界的理解，从而达到追求自身的效果。今天我们有幸邀请到艺术家/国际艺术策展人，郑学武老师来带领我们走进他的艺术禅修的世界。</p>
      <p class="english">Through constant meditation and meditation, artists get rid of troubles and temptations, and show their understanding of human beings, society, environment and even the whole world with their artistic works, so as to achieve the effect of pursuing themselves. Today we are honored to have an artist/international art curator, Zheng Xuewu, to lead us into the world of his art meditation.</p>
      <br><br>
-     <img class="titlelogo" src="xuewu01.jpg">
+     <img class="titlepic" src="xuewu01.jpg">
      <br>
      <p class="chinese"><a class="big">郑学武</a><br>职业艺术家/国际艺术策展人<br>
       出生于黑龙江农垦建设兵团，先后修学业于哈尔滨师范大学艺术学院美术系、中央工艺美术学院装饰绘画系、纽约州立大学美术学院版画系。
@@ -50,11 +50,11 @@
      Zheng Xuewu also is a visiting professor at Appalachian State University and the University of North Carolina, USA; visiting scholar at Columbia University, Parsons, Vassar College, and Cork University in Ireland；International resident artists from The Vermont Art Center, Belgium, And Gwangju City Museum of Fine Arts. His work has been exhibited in many exhibitions.（Asia, Europe, Australia and the United States)<br>
      Important collections: National Art Museum of China, Museum of Kohler Huizhi, Gwangju Museum of Korea, Akram Museum of the United States, Australian Embassy in China, etc.</p>
      <br><br>
-     <img class="titlelogo" src="xuewu02.jpg">
+     <img class="titlepic" src="xuewu02.jpg">
      <br><br>
-     <img class="titlelogo" src="xuewu03.jpg">
+     <img class="titlepic" src="xuewu03.jpg">
      <br><br>
-     <img class="titlelogo" src="xuewu04.jpg">
+     <img class="titlepic" src="xuewu04.jpg">
      <br><br>
      <img class="titlelogo" src="chuangzuochuzhong.gif">
      <br>
@@ -66,11 +66,11 @@
       I also believe that the process of artistic practice is ordinary work, a simple and natural creation, and a consciousness of action. When I create works and think about art, it is also the process of my personal meditation and self-talk. This creative process is more important than the final work. There is no ending to artistic practice, and the inner experience of difficult exploration is always as wonderful as a dream for me.<br>
       "Meditation" is the content of my life and the state of my life."</p>
     <br><br>
-    <img class="titlelogo" src="xuewu05.jpg">
+    <img class="titlepic" src="xuewu05.jpg">
     <br>
-    <img class="titlelogo" src="xuewu06.jpg">
+    <img class="titlepic" src="xuewu06.jpg">
     <br>
-    <img class="titlelogo" src="xuewu07.jpg">
+    <img class="titlepic" src="xuewu07.jpg">
     <br><br>
     <img class="titlelogo" src="Q&A.gif">
     <br>
@@ -82,7 +82,7 @@
     For young artists, it is hoped that they can get more help and they should boldly overthrow all restrictions as they grow up.
     </p>
     <br>
-    <img class="titlelogo" src="xuewu08.jpg">
+    <img class="titlepic" src="xuewu08.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 平时是如何规划自己的工作时间的？对于工作室的布置有没有什么特殊的喜好？说出一项在生活中最能激发您设计灵感的方式？</p>
     <p class="english">How do you plan your work normally? Do you have any preferences for the layout of the studio? How do you inspire your work?</p>
@@ -91,28 +91,28 @@
     <p class="english"> Regardless of the material and type of painting, my creation is a "meditation" concept, so I will pay attention to my work anytime anywhere without time to plan.
     There is no special layout in the studio, it is basically a combination of work and installation. There are often no clear boundaries between my life and creation, so it is difficult to say that a certain thing will inspire me.</p>
     <br>
-    <img class="titlelogo" src="xuewu09.jpg">
+    <img class="titlepic" src="xuewu09.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 在疫情严重的当下，很多行业和市场都受到了影像。疫情对您的生活是否有影响？对于您所处的行业和市场会有哪些改变？</p>
     <p class="english"> We know the epidemic affects lots of business and market in nowadays. Does the epidemic affect your life? What changes will happen to your industry?</p>
     <p class="chinese"><a class="big"> 郑学武 Xuewu Zheng:</a> 疫情对所有人的生活都有影响，毫无疑问。很多艺术家的艺术市场很多元化、凡相互关联，疫情使得方方面面停止，绝大多数艺术家没有了艺术市场。</p>
     <p class="english">The epidemic has an impact on everyone's lives, no doubt.The art market of many artists is diversified and interrelated. The epidemic has stopped all aspects, and most artists lost their resources..</p>
     <br>
-    <img class="titlelogo" src="xuewu10.jpg">
+    <img class="titlepic" src="xuewu10.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 对于当下的年轻人，在还未步入社会前如何提前适应艺术社会？或者说可以通过哪些方式进一步发展自己的专业而不会变成毕业即失业的情况？</p>
     <p class="english">For young people, how can they adapt to the art society before they enter society? In other words, what ways can people further develop their major without becoming unemployed after graduation?</p>
     <p class="chinese"><a class="big"> 郑学武 Xuewu Zheng: </a> 了解社会、适应社会的唯一方法是进入社会，学生必须一定程度的接触社会，接触深度决定了了解和适应的程度。学校是训练场不是战场，学业是储备，有准备的适当上战场才能成长、才能迅速适应。</p>
     <p class="english">The only way to understand and adapt to society is to enter society. Students must have a certain degree of contact with society. The depth of contact determines the degree of understanding and adaptation. School is a training ground not a battlefield. Schoolwork is a reserve. Only those who are prepared and properly can grow and adapt quickly.</p>
     <br>
-    <img class="titlelogo" src="xuewu11.jpg">
+    <img class="titlepic" src="xuewu11.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 在您这样的年龄，重返校园攻读双硕士，是什么样的原因让您做出这样的决定？在这期间又有哪些有趣的经历呢？</p>
     <p class="english">At your age, returning to campus to study for a double master's degree. What made you make such a decision? What are the interesting experiences during this period?</p>
     <p><a class="big"> 郑学武 Xuewu Zheng:</a> 对于外国人来说，学校是了解西方教育体系和理念甚至生活方式最为重要的地方。对于一个成熟的艺术家，回到学校做艺术学生是个很大的挑战，在思想上需要腾空自己固有的思考问题的方法和其他很多东西。学习过程中有无数有趣的经历、受益匪浅。</p>
     <p class="english">For the western, school is the most important place to learn about their education system, ideas, and even the way of life. For a mature artist, it is a great challenge to go back to school as an art student, mentally vacating his inherent way of thinking and many other things. There are countless interesting experiences and benefits in the learning process.</p>
     <br>
-    <img class="titlelogo" src="xuewu12.jpg">
+    <img class="titlepic" src="xuewu12.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 为什么选择手造纸作为作品媒介，对作品的表现又有怎样的的帮助？制作了这么多的作品，哪件或者哪个系列是最喜爱的呢？作为艺术家，你最想通过作品传达给普通公众什么？</p>
     <p class="english">Why do you choose hand-made paper as the medium of your works and how does it help the performance of your works? With so many works, which one or series is your favorite? As an artist, what do you want to convey to the general public through your work?</p>
@@ -120,7 +120,7 @@
     <p class="english"> Hand-made paper is the most important content in the printmaking profession of Western art education. No matter what materials and techniques are sent to me in the course, I will quickly apply it in my practices.</p>
     <p class="english">All my works are a large series. That is to say, no matter what material I use, I am still making the work, and they are all part of the work.I conveyed a concept to the audience: art can have a lot of possibilities, and everyone can create their own art.</p>
     <br>
-    <img class="titlelogo" src="xuewu13.jpg">
+    <img class="titlepic" src="xuewu13.jpg">
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 现在艺术电商和各种自媒体平台非常多，您是如何推广您的作品的呢？有些艺术家疲于在各种平台上注册和宣传推广自己的作品，那您有哪些自己独有的宣传方式呢？</p>
     <p class="english">There are many art e-commerce and various self-media platforms now, how do you promote your work? Some artists are tired of registering and promoting their works on various platforms, so what are your unique ways of promotion?
     </p>
@@ -128,20 +128,20 @@
     <p class="english"> In the network era, using the network to do things is the characteristic of this era. I am no exception. My own styles and characteristics are determined, no matter how many sites, where there is all relatively fixed content. This will not need to be too much labor and not too busy.
     Of course, it will be nice to have a cooperative gallery to work with or some related artworks.</p>
     <br>
-    <img class="titlelogo" src="xuewu14.jpg">
+    <img class="titlepic" src="xuewu14.jpg">
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 第一份工作是什么？大学的专业和现在的事业有关吗？是什么专业？哪一个工作对于现在的事业最有帮助？具体做的什么？时长？</p>
     <p class="english">What was your first job? Is your major related to your current career? What's your major? Which job is most helpful for your current career? What exactly do you do? How long?</p>
     <p class="chinese"><a class="big"> 郑学武 Xuewu Zheng:</a>曾经做过的工作是大学艺术教师、广告公司平面设计师、国际艺术活动策展人、艺术家国际驻访项目创始人等，各种事情相互交叉但都是艺术工作。</p>
     <p class="english"> I used to work as an art teacher in a university, a graphic designer in an advertising agency, a curator of international art events, a founder of the artists' International resident program, etc., all of which are intersecting but all related to art.</p>
     <br>
-    <img class="titlelogo" src="xuewu15.jpg">
+    <img class="titlepic" src="xuewu15.jpg">
     <p class="chinese">芝加哥大学博物馆藏品之一 - （无题）</p>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 巫鸿老师主办的芝加哥大学博物馆“中国馆藏项目”收录了好几件您的版画和绘画作品，作为他们的首批馆藏，您能简单介绍一下这里头中您最喜爱的一个作品，和作品背后的含义？</p>
     <p class="english">As the first collection of several of your prints and paintings in the University of Chicago Museum's "China Collection" organized by Professor Wu Hong. Could you briefly introduce one of your favorite works here and the meaning behind it?</p>
     <p class="chinese"><a class="big"> 郑学武 Xuewu Zheng:</a>因为疫情的原因，不知道他们的事情进展如何。其中有我的版画作品，是我的持续至今的代表性作品“禅说”系列，“禅说”作品是我生活禅修过程中的产物，很个性化，算是一个现代艺术家对传统东方哲学、宗教的诠释吧。</p>
     <p class="english"> I don't know how they're doing because of the epidemic. For my prints and paintings, which are my representative works "Zen Theory" series. "Zen Theory" works are the product of my meditation practice in life. They are very personalized and can be regarded as a modern artist's interpretation of traditional Oriental philosophy and religion.</p>
     <br>
-    <img class="titlelogo" src="xuewu16.jpg">
+    <img class="titlepic" src="xuewu16.jpg">
     <p class="chinese">“禅说”系列 - （细节）</p>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 艺术家驻地项目的申请充斥着许多复杂的手续，步骤和困难。作为新手艺术家，如果想做到不出错，不偏离申请方向，该如何申请到自己理想的项目？又有哪些国内外驻地项目可以私心推荐的呢？</p>
     <p class="english">The application process for the artist residency program is fraught with many complicated procedures and difficulties. As a new artist, if I don’t want to make mistakes and not deviate from the application direction, how can I apply for my ideal project? What domestic and foreign resident projects can be personally recommended?</p>
@@ -150,15 +150,15 @@
     <p class="english">Projects around the world vary from place to place with different focuses. Young artists should have a clear purpose. You should know what kind of project you choose, the historical or modern environment where the project is located, etc. </p>
     <p class="english">Study what programs are available and offer exactly what you need before you apply. At the same time, don't be superstitious about any fame project. Try to use the residential project as a bridge to your future job instead of purely attending it.</p>
     <br>
-    <img class="titlelogo" src="xuewu17.jpg">
+    <img class="titlepic" src="xuewu17.jpg">
     <p class="chinese">“禅说”系列</p>
-    <img class="titlelogo" src="xuewu-huayu.gif">
+    <img class="titlepic" src="xuewu-huayu.gif">
     <div class="information">
     <p class="chinese"><a class="big">艺术家个人联系方式</a></p>
     <p class="chinese"> <a class="link" href="https://www.zhengxuewuart.com/" target="_blank">✤ 艺术家网站（Artist Website)</a></p>
     <p class="chinese"> <a class="link" href="https://www.instagram.com/xuewu_zheng/" target="_blank">✤ 个人INS(instagram): xuewu_zheng</a></p>
     <br>
-    <img class="titlelogo" src="xuewu-final.jpg">
+    <img class="titlepic" src="xuewu-final.jpg">
   </div>
   <br><br>
      <p class="big">木牙微信订阅号</p>
