--- a/avaroth-html/index.html
+++ b/avaroth-html/index.html
@@ -27,7 +27,7 @@ gtag('config', 'G-P2726CSWT4');
   <div class="container">
     <br>
     <p class="title_big">跨界媒介的碰撞：蜂巢+刺绣 | Ava Roth 「艺术访谈」</p>
-    <img class="titlelogo" src="avaroth-title.jpg">
+    <img class="titlepic" src="avaroth-title.jpg">
     <br>
     <p class="text">欢迎来到木牙Make Unique Young Arts，让我们来探索跨领域/有机材料艺术与蜜蜂的世界🐝～</p>
     <br><br>
@@ -48,8 +48,8 @@ gtag('config', 'G-P2726CSWT4');
     <p class="chinese">Ava Roth 的作品在多伦多的Loop画廊，渥太华的Wallspace画廊和西雅图的Frederick Holmes and Company都展出过。除了个人展览和团体展览之外，Roth的作品还曾在许多在线和印刷杂志上展出，她的绘画作品多次获奖。她的作品已被加拿大乃至全球的私人收藏家收购。</p>
     <p class="english">Ava Roth is represented by Loop Gallery, in Toronto, Wallspace Gallery, in Ottawa and Frederick Holmes and Company, in Seattle. In addition to exhibiting in solo and group shows, Roth's work has been featured in many on-line and print magazines, and she has been the recipient of several awards for her paintings. Her pieces have been acquired by private collectors throughout Canada and internationally.</p>
     <br><br>
-    <img class="titlelogo" src="avaroth02.jpg"><br>
-    <img class="titlelogo" src="avaroth03.jpg">
+    <img class="titlepic" src="avaroth02.jpg"><br>
+    <img class="titlepic" src="avaroth03.jpg">
     <br><br>
     <img class="titlelogo" src="chuangzuochuzhong.gif">
     <br>
@@ -60,10 +60,10 @@ gtag('config', 'G-P2726CSWT4');
     <p class="chinese">这个项目已经进行了两年。掌握复杂的变量需要花费大量的时间尝试和犯错，例如蜜蜂应对和抗拒（或销毁）何种材料，如何将碎片从蜂巢中移动或移出蜂巢以防止杂物的存在。如何向蜜蜂“传达”有关在哪里建立和在哪里不建立蜂窝的说明。我一直在与养蜂大师Mylee Nordin合作，后者在制定，实施甚至帮助概念化该项目的范围方面都是必不可少的。</p>
     <p class="english">This project has been two years in the making. It has taken a tremendous amount of trial and error to master the complex variables, such as what materials the bees respond to and reject (or destroy), how fast to get the pieces in and out of the hive in order to prevent the presence of brood or honey in the comb, how to “communicate” instructions to the bees about where to build and where not to build comb. I’ve been working with master beekeeper Mylee Nordin, who has been indispensable in strategizing, implementing, and even helping to conceptualize the scope of this project. </p>
     <br><br>
-    <img class="titlelogo" src="avaroth04.jpg"><br>
-    <img class="titlelogo" src="avaroth05.jpg"><br>
-    <img class="titlelogo" src="avaroth06.jpg"><br>
-    <img class="titlelogo" src="avaroth07.jpg">
+    <img class="titlepic" src="avaroth04.jpg"><br>
+    <img class="titlepic" src="avaroth05.jpg"><br>
+    <img class="titlepic" src="avaroth06.jpg"><br>
+    <img class="titlepic" src="avaroth07.jpg">
     <br><br>
     <img class="titlelogo" src="Q&A.gif">
     <br><br>
@@ -72,51 +72,51 @@ gtag('config', 'G-P2726CSWT4');
     <p class="chinese"><a class="big">Ava Roth:</a> 我非常喜欢使用有机材料，但是在我与蜜蜂合作的情况下，这些材料也必须适用于蜜蜂。我最关心的是蜜蜂的安全性，因为我不想运用任何有毒物质或任何可能会损害其蜂群完整性的物质。我还必须确保材料足够小并且足够灵活以适合框架内部，因为框架必须适合标准蜂箱。最后，我尝试寻找不会随着时间而分解或变质的有机材料，从而使我的作品变得稳定从而更好保存。</p>
     <p class="english"> I am always drawn to using organic materials, but in the case of my bee collaboration, the materials also have to amenable to the bees. My first concern is safety for the bees since I don’t want to introduce anything toxic or anything that could compromise the integrity of their colony. I also have to make sure that the materials are small enough and flexible enough to fit inside the frames since the frames must fit into a standard beehive. Finally, I try to find organic materials that will not decompose or deteriorate over time, so that my piece of art is stable and archival.</p>
     <br>
-    <img class="titlelogo" src="avaroth08.jpg">
+    <img class="titlepic" src="avaroth08.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 现在关于当代独立女性艺术家的评论以及争议非常之多。在早期，女性是无法成为艺术家并且得到公平对待的，而现在女性艺术家逐渐开始被接受。对此Roth有哪些关于自己的想法呢？</p>
     <p class="english">There has been a lot of criticism and controversy about contemporary independent female artists. In the early days, women could not be artists and were treated fairly, but now female artists are gradually being accepted. What does Roth think of the situation?</p>
     <p class="chinese"><a class="big">Ava Roth:</a> 我感到非常幸运，能够生活在一个受到女性视觉艺术家的高度尊重和我们的作品合法化的时代和地方。我知道这在历史上不是这种情况，今天在世界许多地方也并非如此，但是在我在多伦多市中心的职业生涯中，我不知道自己的工作遇到过任何争议或公平问题因为我是女人不幸的是，在许多其他工作领域以及许多其他努力中，情况并非如此！在大多数领域，妇女仍然存在许多歧视和障碍，并付出了不平等的待遇。但幸运的是，我的视觉艺术还没有遇到过这种情况。</p>
     <p class="english">I feel very lucky to live in a time and place where female visual artists are largely respected and our work legitimized. I am aware this has not been the case historically, and that it is not the case in many parts of the world today but in my career in downtown Toronto I am not aware of having encountered any controversy or equity issues with respect to my work because I am a woman. Unfortunately, that is not the case with many other lines of work and with many other endeavors! There is still a lot of discrimination and obstacles and pay inequity for women in most fields. But luckily I have not encountered this with my visual art.</p>
     <br>
-    <img class="titlelogo" src="avaroth09.jpg">
+    <img class="titlepic" src="avaroth09.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 看到您的作品中有部分是photography的元素，您觉得photography在您的作品占据着怎样的构成呢？或扮演怎样的角色呢？</p>
     <p class="english">Seeing that some of your works are photography elements, what kind of composition do you think photography occupies in your works? Or what kind of role?</p>
     <p class="chinese"><a class="big">Ava Roth:</a> 的确，我的一些作品涉及到摄影，但是我会将使用的照片切成小块，然后重新组装在更大的画布上，所以我在思考构图时，通常是在大块的背景下进行的与照片本身相反。在这一点上，我必须平等地考虑构成作品的所有要素，而我最关心的始终是每件作品中的张力和平衡。</p>
     <p class="english">It is true that some of my work involves photography, but the photograhs I use are always cut into smaller pieces and re-assembled on a larger canvas, so by the time I am considering composition it is usually in the context of a big piece, as oppose to in the photograph itself. At that point, I must think about all the elements of composition equally, and I am always most concerned about tension and balance in each piece.</p>
     <br>
-    <img class="titlelogo" src="avaroth10.jpg">
+    <img class="titlepic" src="avaroth10.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 看到您在很多的画廊都有作品的展览，我们很好奇您是如何将这样原生态和自然的作品搬入画廊展厅展示的呢？蜂巢是否会存在时效问题？</p>
     <p class="english">Seeing that you have exhibited your works in many galleries, we are very curious about how you brought such original and natural works into the gallery exhibition. Does the honeycomb have an aging problem?</p>
     <p class="chinese"><a class="big">Ava Roth:</a> 蜂窝本身很稳定并且不会因为时间而变坏，尽管它很脆弱并且很容易被压碎。因此，尽管它不存在老化问题，但我还是必须将其理解归类为潜在的临时艺术品。</p>
     <p class="english">The honeycomb is in itself very stable and will not deteriorate over time, although it is fragile and can be easily be crushed. So, although it does not have a problem with aging, I do believe must be understood as a potentially temporary piece of art.</p>
     <br>
-    <img class="titlelogo" src="avaroth11.jpg">
+    <img class="titlepic" src="avaroth11.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> Roth参与了许多展览其中包括寄往国外的。作品在寄往展览的过程中难免会遇到颠簸。蜂窝属于敏感性物质以及容易损坏，Roth是如何打包作品进行运输的呢？有什么特殊的保护手法和特殊的运货渠道吗？</p>
     <p class="english">Roth has participated in many exhibitions including international exhibitions. There are bumps in the road when work is sent to an exhibition. Honeycomb is a sensitive substance and vulnerable to damage. How did Roth package the work for shipment? Are there any special protection methods and special delivery channels?</p>
     <p class="chinese"><a class="big">Ava Roth:</a> 航运艺术品总是给我带来压力，尤其是当作品是脆弱的！我已经开发并制造了用于蜂窝件的特殊容器，以防止它们在运输过程中受到损坏。每件作品都牢固在锁定的定制盒子内的适当位置，盒子本身的构造方式可以保护作品本身，以防万一作品不慎掉落或被粗暴对待。然后，我使用FedEx来运送他们。</p>
     <p class="english">Shipping art is always stressful for me, especially when the work is fragile! I have developed and built special containers for the honeycomb pieces that prevent them from being damaged in transit. Each piece is securely locked into place inside a custom-built box, and the box itself is constructed in a way that protects the art in case it is dropped or treated carelessly. I then ship the boxes using FedEx.</p>
     <br>
-    <img class="titlelogo" src="avaroth12.jpg">
+    <img class="titlepic" src="avaroth12.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 最近在做什么工作或者有趣的事情呢？大学时期的专业方向是什么呢？</p>
     <p class="english">What kind of work or interesting things have you been doing recently? What was your major direction in college?</p>
     <p class="chinese"><a class="big">Ava Roth:</a> 因为与蜜蜂的工作是季节性的，在这个时节，我还在参与和蜜蜂协作的作品过程中。当寒冷的天气到来并且蜂箱在冬天关闭时，我将注意力转向“迷恋的绘画”。我真的很喜欢这种与季节同步的周期性工作方式！在大学里，我没有追求视觉艺术。尽管我对艺术感兴趣，但我主修历史和环境研究！</p>
     <p class="english">Because the work with bees is seasonal, at this point I am still deeply engaged in this collaborative bee process. When the cold weather sets in and the beehives are closed up for the winter, I will turn my attention back to encaustic painting. I have really grown to love this cyclical pattern of my work being synced with the seasons! In college, I did not pursue visual art. Although I was interested in art, I was majoring in history and environmental studies!</p>
     <br>
-    <img class="titlelogo" src="avaroth13.jpg">
+    <img class="titlepic" src="avaroth13.jpg">
     <br><br>
-    <img class="titlelogo" src="avaroth-flower.gif">
+    <img class="titlepic" src="avaroth-flower.gif">
     <br><br>
-    <img class="titlelogo" src="avaroth14.jpg">
+    <img class="titlepic" src="avaroth14.jpg">
     <br><br>
     <p class="english"><a class="big">✯ Which inspire your works most ✯ </a></p>
     <p class="english">“But the effect of her being on those around her was incalculably diffusive: for the growing good of the world is partly dependent on unhistoric acts; and that things are not so ill with you and me as they might have been, is half owing to the number who lived faithfully a hidden life, and rest in unvisited tombs.”</p>
     <br><br>
-    <img class="titlelogo" src="avaroth15.jpg">
+    <img class="titlepic" src="avaroth15.jpg">
     <br><br><br>
     <div class="information">
     <p class="chinese"><a class="big">Ava Roth联系方式</a></p>
@@ -124,7 +124,7 @@ gtag('config', 'G-P2726CSWT4');
     <p class="english"> <a class="link" href="http://www.avaroth.ca/" target="_blank">✤ Ava Roth网站（Ava Roth Website)</a></p>
     <p class="english"> <a class="link" href="https://www.instagram.com/avarothart/" target="_blank">✤ INS(instagram): avarothart</a></p>
     <br>
-    <img class="titlelogo" src="avaroth-final.jpg">
+    <img class="titlepic" src="avaroth-final.jpg">
     </div>
     <br><br>
      <p class="big">木牙微信订阅号</p>
