--- a/synopticoffice-html/index.html
+++ b/synopticoffice-html/index.html
@@ -27,7 +27,7 @@ gtag('config', 'G-P2726CSWT4');
   <div class="container">
     <br>
     <p class="title_big">跨文化下的字体设计 | Synoptic Office 「艺术访谈」</p>
-    <img class="titlelogo" src="synopticoffice.jpg">
+    <img class="titlepic" src="synopticoffice.jpg">
     <br>
     <p class="text">欢迎来到木牙Make Unique Young Arts，让我们来探索跨领域文字设计～</p>
     <br><br>
@@ -54,18 +54,18 @@ gtag('config', 'G-P2726CSWT4');
     YuJune为包括当代艺术博物馆、Milk工作室、Davis博物馆和大都会艺术博物馆在内的多个客户工作并与他们合作，包括Base Design、Graphic Thought Facility、Rockwell Lab和Pentagram。除了教学，YuJune在Typographics, Northside Festival和AIGA/NY上广泛谈论设计教育和排版。她是TDC的董事会成员。</p>
     <p class="english">YuJune Park is a designer and an Assistant Professor of Communication Design at Parsons School of Design. She served as the Program Director from 2014–2017 and Associate Director from 2017–2019. Her work has been recognized by the AIGA, the I.D. Annual Design Review, and the Art Director’s Club Awards. She holds an MFA in Graphic Design from Yale University and a BFA in Furniture Design from the Rhode Island School of Design.<br><br>YuJune has worked for and collaborated with several studios including Base Design, Graphic Thought Facility, Rockwell Lab, and Pentagram for a variety of clients including the Museum of Modern Art, Milk Studios, the Davis Museum, and the Metropolitan Museum of Art. In addition to teaching, YuJune speaks widely on design education and typography, most recently at Typographics, Northside Festival, and AIGA/NY. She sits on the board of directors of the Type Directors Club.</p>
     <br><br>
-    <img class="titlelogo" src="synopticoffice02.jpg"><br>
-    <img class="titlelogo" src="synopticoffice03.jpg"><br>
-    <img class="titlelogo" src="synopticoffice04.jpg"><br>
-    <img class="titlelogo" src="synopticoffice05.jpg">
+    <img class="titlepic" src="synopticoffice02.jpg"><br>
+    <img class="titlepic" src="synopticoffice03.jpg"><br>
+    <img class="titlepic" src="synopticoffice04.jpg"><br>
+    <img class="titlepic" src="synopticoffice05.jpg">
     <br><br>
     <img class="titlelogo" src="chuangzuochuzhong.gif">
     <br>
     <p class="synopticeoffice-central">我们相信设计是一种探究理解形式、语言和文化的方法。</p>
     <p class="synopticeoffice-central">We believe design is a method of inquiry for understanding form, language, and culture.</p>
     <br><br>
-    <img class="titlelogo" src="synopticoffice06.jpg"><br>
-    <img class="titlelogo" src="synopticoffice07.jpg">
+    <img class="titlepic" src="synopticoffice06.jpg"><br>
+    <img class="titlepic" src="synopticoffice07.jpg">
     <br><br>
     <img class="titlelogo" src="Q&A.gif">
     <br><br>
@@ -74,48 +74,48 @@ gtag('config', 'G-P2726CSWT4');
     <p class="chinese"><a class="big">Synoptic Office:</a> 工作室的建立源于我们在研究生院发展的友谊。我们发现我们在一起工作非常愉快，并且在看待事物的方式上，我们有相似的见解。实际上，“synoptic”是指共同见证。我们尽量不考虑我们是研究型还是商业型工作室。两种类型的活动都是相关的，因为前者赋予我们能够想象和检验新想法的能力，而后者允许我们能够制定和创造实现这些想法。它们在我们的整体设计实践中都很重要。</p>
     <p class="english">The studio was born out of the friendship we developed during graduate school. We realized that we worked well together and had a similar way of looking at things. In fact, ‘synoptic’ means seeing together.  We try not to think too much about whether we are a research-based or a commercial-based studio. Both types of activities are related because the former gives us the ability to imagine and test new ideas and the latter allows us to enact and create impact with those ideas. They are both important in our holistic practice of design. </p>
     <br>
-    <img class="titlelogo" src="synopticoffice08.png"><br>
-    <img class="titlelogo" src="synopticoffice09.jpg">
+    <img class="titlepic" src="synopticoffice08.png"><br>
+    <img class="titlepic" src="synopticoffice09.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 中文字体设计的逻辑和思想与中国的书法是极为相似的，或者说书法是字体设计的基础。Synoptic Office 是如何理解他们之间的关系和联系的呢？</p>
     <p class="english">The logic and concept of Chinese type design are very similar to Chinese calligraphy, or calligraphy is the basis of the typographic design. How does the Synoptic Office understand the relationships and connections between them? </p>
     <p class="chinese"><a class="big">Synoptic Office:</a> 版式和字体设计一直是大量机械的字母与字符的生产形式与个人独特书写方式之间的一种协商关系。这种关系不是以一种简单的二进制为条件，而是一种循序或渐进，它可以创造出适用于不同情况的不同形式。</p>
     <p class="english">Typography and type design is always a negotiated relationship between a mass, mechanical form of  producing letters or characters and an individual’s unique way of writing. This relationship is not a simple binary condition but a continuum or gradient that produces different types of form appropriate for different  types of situations. </p>
     <br>
-    <img class="titlelogo" src="synopticoffice10.png"><br>
-    <img class="titlelogo" src="synopticoffice11.jpg">
+    <img class="titlepic" src="synopticoffice10.png"><br>
+    <img class="titlepic" src="synopticoffice11.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 随着短视频时代的开始，文本时代的消退。人们对于文字的依赖开始弱化，文本思维可能会开始改变。synoptic Office 作为一个比较专注于字体设计的设计工作室，对于文字依赖开始弱化有着怎样的理解？会因此改变一些原本的设计理念吗？</p>
     <p class="english">With the beginning of the popular era of the short video, the era of text faded away. People's dependence on typography is beginning to weaken, and text thinking may shift. How does the Synoptic Office (as a design studio focusing on type design）understand this situation about typography dependence is beginning to weaken? Will this change some of the original design philosophy? </p>
     <p class="chinese"><a class="big">Synoptic Office:</a> 虽然目前形式的短片（例如TikTok）看起来很新，但实际上它们已成为更长久的图像制作传统的一部分。文本和图像都坚定地属于图形和通信设计的领域，所以我们不认为这些东西是激进的，而仅仅是进化。唯一更加突出的可能是在时间/动态方面。但是，请记住，从历史上看，文字通常被视为图像，因此它并不是弱化了对文字的依赖，而是从将文字视为文本到将文字视为图像的偏好转变。</p>
     <p class="english">While short videos in its current form (e.g. TikTok) seem new, they are actually part of a longer tradition of  image-making. Both text and image are firmly within the domain of graphic and communication design, so  we do not see these things as radical but merely evolutionary. The only thing that is maybe more  prominent is the time/motion aspect. However, remember that historically, type is often treated as image  so it is not so much a weakening dependence on type but a shifting preference from seeing type as text  to seeing type as image.</p>
     <br>
-    <img class="titlelogo" src="synopticoffice12.jpg"><br>
-    <img class="titlelogo" src="synopticoffice13.jpg">
+    <img class="titlepic" src="synopticoffice12.jpg"><br>
+    <img class="titlepic" src="synopticoffice13.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 从观看者角度看来，无衬线字体比衬线字体更具现代感，在Synoptic Office的“重组想象”项目和“中文字库收录”项目中都更加侧重于对衬线字体的探索，请问Synoptic Office又是如何看待字体风格中视觉上不同年代的差异感的呢？</p>
     <p class="english">From the viewer's point of view, The sans-serif font looks modern than the serif font. The Synoptic Office’s “Ming Romantic: Collected and Bound” Project and “The Chinese Type Archive” project are both focused on exploring the serif fonts more. How does the Synoptic Office look at the difference between both types of font in varying ages? </p>
     <p class="chinese"><a class="big">Synoptic Office:</a> 我们不太确定现代性是否存在，因为它很容易陷入基于风格来评估产品（作品）的谬论。当我们看字体外形的时候，不管是字体还是平面设计，我们感兴趣的是什么形式它最早存在，然后那些形式是如何基于适用于它们的规则和条件而改变的。生物进化就是一个很好的例子。我们可能会认为有翅膀的会飞的鸟比之前那些飞得不好的生物更“现代”。但也有一些不会飞的鸟类，比如企鹅、秧鸡和灭绝的渡渡鸟，它们已经失去了飞翔的能力。这些同样是“现代”的鸟类，但是由于它们所处的环境不同，它们采取了不同的形式。当我们开始通过这个镜头来看待设计和打字时，我们突然可以看到更广阔的东西。</p>
     <p class="english">We’re not so sure that modernity has a look because that would easily fall into the fallacy of evaluating  artifacts based on style. When we look at forms, whether it is type or graphic design, we are interested in  what forms existed first and then how those forms changed based on rules and conditions applied to  them. Biological evolution is a really good example. We might think that a flying bird with wings is more  ‘modern’ than the creatures that came before it which didn’t fly so well. But there are also flightless birds  like penguins, crakes, and the extinct dodo which lost the ability to fly. These are equally ‘modern’ birds but they took a different form because of the conditions imposed on them. When we begin to view design  and type through this lens, we suddenly are able to see more expansively. </p>
     <br>
-    <img class="titlelogo" src="synopticoffice14.jpg"><br>
-    <img class="titlelogo" src="synopticoffice15.jpg">
+    <img class="titlepic" src="synopticoffice14.jpg"><br>
+    <img class="titlepic" src="synopticoffice15.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 文字在书籍设计中和空间设计中在叙事性上存在哪些不同呢？如何在一个空间中打破平面思维进行关于文字的展示及陈列的呢？</p>
     <p class="english">What are the narrative differences between typography design in book and space? How to break the 2D graphic thinking in a space about the exhibit and display of typography? </p>
     <p class="chinese"><a class="big">Synoptic Office:</a> 我们认为这又回到了把文字看作图像而不是把文字看作文本。在一本书中，文字往往被视为文本，而在一个环境中，文字往往被视为图像。当然，这不是一个非此即彼的情况，而是我们在空间中处理文字的方式和管理良好架构设置的文本可能会遵循不同的规则。</p>
     <p class="english">We think this goes back to seeing type as image versus seeing type as text. In a book, type tends to be  viewed as text while in an environment, type tends to be seen as an image. This is, of course, not an  either-or condition, but it means that the way we treat type in space may follow different rules than those  that govern a well-set text. </p>
     <br>
-    <img class="titlelogo" src="synopticoffice16.jpg"><br>
-    <img class="titlelogo" src="synopticoffice17.jpg">
+    <img class="titlepic" src="synopticoffice16.jpg"><br>
+    <img class="titlepic" src="synopticoffice17.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 就平面来说，字体的设计分国家吗？如何理解跨文化文字设计？谁又能够设计他国字体？</p>
     <p class="english">As far as graphic design, will typeface/letterform design be differentiated by country? How to understand cross-cultural character design? Who can design another country's font? </p>
     <p class="chinese"><a class="big">Synoptic Office:</a> 国家是有分的，但很多时候不足以分类和谈论字体和字体形式。当人们一生中在不同的地方学习、生活和工作时，这种情况比以往任何时候都更加明显。Jing Tsu’s/石静远-（耶鲁大学东亚文学系教授）的文学治理是一个很有用的概念。任何语言都有许多涉众(可能不止一个人这么想)与之有着不同的关系，这也可以应用到文字设计中。</p>
     <p class="english">Countries are useful but many times inadequate groupings for classifying and talking about typefaces and  letterforms. This is the case now more than ever when people learn, live, and work in different places  throughout their lives. A useful concept to talk about this is Jing Tsu’s literary governance. There are  many stakeholders (more than one might think) with different relationships to any language, and this can  be applied to type design as well.  </p>
     <br>
-    <img class="titlelogo" src="synopticoffice18.png"><br>
-    <img class="titlelogo" src="synopticoffice19.png">
+    <img class="titlepic" src="synopticoffice18.png"><br>
+    <img class="titlepic" src="synopticoffice19.png">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 对于DIY（Do it yourself）和 DIY （Design it yourself） Synoptic Office 是如何理解这两个词与设计之间的关系？</p>
     <p><a class="english">How does the Synoptic Office understand the relationship between these two DIY "Do It Yourself" and "Design it Yourself" with Design?</a>
@@ -123,27 +123,27 @@ gtag('config', 'G-P2726CSWT4');
     <a class="chinese"><a class="big">Synoptic Office:</a> 我们看不出这两件事有什么区别。</a><br><br>
     <a class="english">We don’t see much difference between these two DIYs.</a></p>
     <br>
-    <img class="titlelogo" src="synopticoffice20.jpg"><br>
-    <img class="titlelogo" src="synopticoffice21.jpg">
+    <img class="titlepic" src="synopticoffice20.jpg"><br>
+    <img class="titlepic" src="synopticoffice21.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> 字体设计无论是哪个国家的文字，都涉及了太多的细节，但是印刷与版式设计的历史在设计中占据着重要地位，请问synoptic office 有什么书籍可以推荐给我们当下对于字体与版式设计感兴趣的学生呢？</p>
     <p><a class="english">Typography, no matter what country it is, involves a lot of detail, but the history of printing and typography is very important in its design. What book the Synoptic Office would recommend to students who are currently interested in typography? </a><br><br>
     <a class="chinese"><a class="big">Synoptic Office:</a> Jost Hochuli’s Detail in Typography </a></p>
     <br>
-    <img class="titlelogo" src="synopticoffice22.jpg"><br>
-    <img class="titlelogo" src="synopticoffice23.jpg">
+    <img class="titlepic" src="synopticoffice22.jpg"><br>
+    <img class="titlepic" src="synopticoffice23.jpg">
     <br>
     <p class="chinese"><a class="big">➤ 木牙MUYA:</a> Synoptic Office认为你们的行业正在向何处移动？5年？10年？你们一天都在做着什么样的工作？</p>
     <p class="english">Where does the Synoptic Office think about the direction of your industry is moving? In five years? Ten years? What kind of work has Caspar and YuJune been doing all day? </p>
     <p class="chinese"><a class="big">Synoptic Office:</a> 总的来说，设计一直受制于技术和我们交流媒介的变化。我们认为将会有一个加速的趋势在动态图形方面(这已经发生)和新的数字界面形式。然而，这并不意味着实体对象会消失。事实上，这正是我们在当前项目中所专注的:数字虚拟状态和物理实体状态之间的关系。</p>
     <p class="english">Design in general has always been subject to shifts in technology and the mediums in which we  communicate. We think there will be an acceleration towards motion graphics (which is already occurring)  as well new forms of digital interfaces. This, however, doesn’t mean that physical objects will go away. In  fact, this is what we are preoccupied with in our current projects: the relationship between the digital and  the physical. </p>
     <br>
-    <img class="titlelogo" src="synopticoffice24.jpg"><br>
-    <img class="titlelogo" src="synopticoffice25.jpg">
+    <img class="titlepic" src="synopticoffice24.jpg"><br>
+    <img class="titlepic" src="synopticoffice25.jpg">
     <br><br>
-    <img class="titlelogo" src="synopticoffice26.jpg">
+    <img class="titlepic" src="synopticoffice26.jpg">
     <br><br>
-    <img class="titlelogo" src="synoptic-office-flower.gif">
+    <img class="titlepic" src="synoptic-office-flower.gif">
     <br><br>
     <p class="english"><a class="big">✯ Which inspire your works most ✯ </a></p>
     <p class="english">“Learning through making”</p>
@@ -154,7 +154,7 @@ gtag('config', 'G-P2726CSWT4');
     <p class="english"> <a class="link" href="https://www.synopticoffice.com/" target="_blank">✤ Synoptic office网站（Synoptic Office Website)</a></p>
     <p class="english"> <a class="link" href="https://www.instagram.com/synopticoffice/" target="_blank">✤ INS(instagram): Synoptic Office</a></p>
     <br>
-    <img class="titlelogo" src="synopticoffice-final.jpg">
+    <img class="titlepic" src="synopticoffice-final.jpg">
     </div>
     <br><br>
      <p class="big">木牙微信订阅号</p>
